/* Translingual */ added "ids=" ⿱日六 (composition) data to /Han char/ template <昗#29989735>

--- a/en/昗/昗.16959.wikitext
+++ b/en/昗/昗.16959.wikitext
@@ -1,7 +1,7 @@
 ==Translingual==
 
 ===Han character===
-{{Han char|rn=72|rad=日|as=04|sn=8|four=|canj=日卜金 (AYC)}}
+{{Han char|rn=72|rad=日|as=04|sn=8|four=|canj=AYC|ids=⿱[[日]][[六]]}}
 
 # {{defn|Han|sort=日04}}
 
