--- a/en/昗/昗.16959.wikitext
+++ b/en/昗/昗.16959.wikitext
@@ -3,10 +3,13 @@
 ===Han character===
 {{Han char|rn=72|rad=日|as=04|sn=8|four=|canj=AYC|ids=⿱[[日]][[六]]}}
 
-# {{defn|Han|sort=日04}}
+# (same as [[昃]]) [[afternoon]]
+# the [[sun]] in the afternoon [[sky]]
+# to [[decline]]
 
 ====References====
 * {{Han ref|kx=0492.121|dkj=13788|hdz=21496.010|uh=6617|ud=26135}}
+*[http://yedict.com/htm/66/6617.htm yedict.com (叶典)]
 
 ----
 
