--- a/en/昃/昃.16939.wikitext
+++ b/en/昃/昃.16939.wikitext
@@ -1,10 +1,10 @@
 ==Translingual==
 
 ===Han character===
-{{Han char|rn=72|rad=日|as=04|sn=8|four=6028<sub>1</sub>|canj=日一人 (AMO)}}
+{{Han char|rn=72|rad=日|as=04|sn=8|four=6028<sub>1</sub>|canj=AMO|ids=⿱[[日]][[仄]]}}
 
 # [[afternoon]]
-# the sun in the afternoon sky
+# the sun in the afternoon [[sky]]
 # to [[decline]]
 
 ====References====
