--- a/en/g/Germany.2103.wikitext
+++ b/en/g/Germany.2103.wikitext
@@ -227,7 +227,7 @@ In its present use, "Germany" almost always refers to the [[Federal Republic of 
 * Tamil: {{t|ta|ஜர்மனி|tr=jarmani}}
 * Tatar: {{t|tt|Алмания|tr=Almaniya|sc=Cyrl}}
 * Telugu: {{t+|te|జర్మని|tr=jarmani}}
-* Thai: {{t+|th|ประเทศเยอรมัน|tr=bpràtêt yerráman}}, {{t+|th|เยอรมนี|tr=yerromnee}}, {{t+|th|เยอรมัน|tr=yerráman}}
+* Thai: {{t+|th|ประเทศเยอรมนี|tr=bpràtêt yerrámani}}
 * Turkish: {{t+|tr|Almanya}}
 * Turkmen: {{t|tk|Germaniýa}}
 * Ukrainian: {{t+|uk|Німеччина|f|tr=Niméččyna}}
