--- a/en/c/cost.6840.wikitext
+++ b/en/c/cost.6840.wikitext
@@ -222,13 +222,14 @@ The past tense and past participle is ''cost'' in the sense of "this computer ''
 * Italian: {{t+|it|costare}}
 * Japanese: {{t|ja|費やす|tr=[[ついやす]], tsuiyasu}}, {{t|ja|掛かる|tr=kakaru}}
 * Jèrriais: {{t|roa-jer|couôter}}
-{{trans-mid}}
 * Kannada: {{t+|kn|ಬೀರು|sc=Knda}}
 * Korean: {{t+|ko|들다|sc=Kore}}
+{{trans-mid}}
 * Lao: {{t-needed|lo}}
 * Latin: {{t+|la|consto}}, {{t+|la|valeo}}
 * Latvian: {{t+|lv|maksāt}}
 * Luxembourgish: {{t|lb|kaschten}}
+* Malay: {{t-needed|ms}}
 * Mongolian: {{t-needed|mn}}
 * Navajo: {{t|nv|bą́ą́h ílį́‎}}
 * Neapolitan: {{t|nap|custà}}
