--- a/en/m/mandat.1837.wikitext
+++ b/en/m/mandat.1837.wikitext
@@ -20,17 +20,21 @@
 
 ===Anagrams===
 * [[damant#French|damant]], [[damnât#French|damnât]]
+
 ===External links===
 * {{R:TLFi}}
 
 ----
+
 ==Ladin==
 
 ===Noun===
 {{lld-noun|m|mandac}}
 
 # [[mandate]]
+
 ----
+
 ==Latin==
 
 ===Verb===
@@ -52,7 +56,7 @@
 # {{l/en|ticket}}; {{l/en|fine}} (document prepared by the police compelling the recipient to pay a fine for a {{l/en|misdemeanor}} or a traffic violation)
 #:''Właśnie dostałem '''mandat''' za złe parkowanie.''
 #::''I've just received a bad parking '''ticket'''.''
-# {{label|pl|politics}} {{l/en|seat}} (membership in an elected representative body, such as the {{l/pl|parliament}})
+# {{label|pl|politics}} {{l/en|seat}} (membership in an elected representative body, such as the [[parliament]])
 #:''W ostatnich wyborach nasza partia zdobyła dwadzieścia '''mandatów'''.''
 #::''In the last election our party won twenty '''seats'''.''
 # {{label|pl|politics|rare|singular only}} {{l/en|mandate}} (authority granted by the {{l/en|electorate}})
@@ -60,15 +64,7 @@
 #::''The government received a strong '''mandate''' to reform the healthcare system.''
 
 ====Declension====
-{{pl-decl-noun
-|mandat|mandaty
-|mandatu|mandatów
-|mandatowi|mandatom
-|mandat|mandaty
-|mandatem|mandatami
-|mandacie|mandatach
-|mandacie|mandaty
-}}
+{{pl-decl-noun-masc-inani|manda|t|u}}
 
 ----
 
@@ -92,8 +88,7 @@
 |mandat|mandate
 |mandate|mandati
 |mandatu|mandatima
-|mandatom|mandatima
-}}
+|mandatom|mandatima}}
 
 ----
 
