--- a/en/型/型.13070.wikitext
+++ b/en/型/型.13070.wikitext
@@ -20,7 +20,7 @@
 ==Cantonese==
 
 ===Hanzi===
-{{yue-hanzi|jyut=[[jing4]]|y=ying4}}
+{{yue-hanzi|jyut=jing4|y=ying4}}
 
 # {{defn|lang=yue|sort=土06}}
 
