--- a/en/坪/坪.13037.wikitext
+++ b/en/坪/坪.13037.wikitext
@@ -27,20 +27,34 @@
 
 ====Readings====
 {{ja-readings
-|on=[[へい]] ([[hei]]), [[ひょう]] ([[hyō]])
+|goon=[[びょう]] (byō) {{non-joyo-reading}}
+|kanon=[[へい]] (hei) {{non-joyo-reading}}
 |kun=[[つぼ]] ([[tsubo]])
 }}
 
+=====Usage notes=====
+The [[音読み#Japanese|''on'yomi'']] are not used in modern Japanese.
+
 ===Etymology===
-Cognate with {{term|壺|tr=tsubo, "a basin"|lang=ja}}.  The current meaning related to area arose from the way a surrounded area with the base or floor lower than the circumference looks like a basin.
+<div style="float:right;">
+{{wikipedia|lang=ja}}
+{{wikipedia|Pyeong}}
+</div>
+{{ja-kanjitab|yomi=k|つぼ}}
+Cognate with {{term|lang=ja|壺|tr=tsubo||basin}}.  The current meaning related to area arose from the way a surrounded area with the base or floor lower than the circumference looks like a basin.<ref name="KDJ">{{R:Kokugo Dai Jiten}}</ref>
+
+Although the reading is different, this areal measurement meaning for {{lang|ja|坪}} is shared in common with the terms {{ko-inline|평|||坪}} in Korean and {{term|lang=zh|坪|tr=pe<sup>5</sup>}} in Taiwanese.
+
+===Pronunciation===
+{{ja-pron|yomi=k|つぼ|acc=0|acc_ref=DJR}}
 
 ===Noun===
-{{ja-noun|k|hira=つぼ|rom=tsubo}}
+{{ja-noun|つぼ}}
 
-# A [[unit]] of [[areal]] measure, in modern usage equivalent to 3.306 [[square metre]]s, traditionally equivalent to the area covered by two standard-sized [[tatami]] mats.
+# A [[unit]] of [[areal]] measure, traditionally a square six {{term|lang=ja|尺|tr=shaku|pos=traditional Japanese unit of length, roughly equivalent to the English [[foot]]}} per side, equivalent to the area covered by two standard-sized [[tatami]] mats.  In modern usage, standardized at 3.306 [[square metre]]s.
 
-[[Category:Japanese terms written with one Han script character]]
-[[Category:Japanese terms spelled with 坪]]
+===References===
+<references/>
 
 ----
 
