--- a/en/t/tortoise.4772.wikitext
+++ b/en/t/tortoise.4772.wikitext
@@ -61,7 +61,7 @@
 * Indonesian: {{t+|id|kura-kura}}, {{t+|id|penyu}}
 * Interlingue: {{t|ie|tortug}}
 * Isthmus Zapotec: {{t|zai|bigu}}
-* Italian: {{qualifier|tortoise or turtle}} {{t+|it|tartaruga|f}}
+* Italian: {{qualifier|tortoise or turtle}} {{t+|it|tartaruga|f}}, {{t+|it|testuggine|f}}
 * Japanese: {{qualifier|tortoise or turtle}} {{t+|ja|亀|tr=[[かめ]], kame|sc=Jpan}}, {{t|ja|カメ|tr=kame|sc=Jpan}}, {{t|ja|陸亀|tr=りくがめ, rikugame|sc=Jpan}}
 * Jèrriais: {{t|roa-jer|tortue|f}}
 * Kannada: {{t+|kn|ಆಮೆ|tr=āme|sc=Knda}}, {{t+|kn|ಕೂರ್ಮ|tr=kūrma|sc=Knda}}
