--- a/en/c/curtain.7391.wikitext
+++ b/en/c/curtain.7391.wikitext
@@ -15,10 +15,10 @@ From {{etyl|fro|en}} {{term|cortine|lang=fro}}, from {{etyl|la|en}} {{term|corti
 {{en-noun}}
 
 # A piece of [[cloth]] [[cover]]ing a [[window]], [[bed]], etc. to offer [[privacy]] and keep out [[light]].
-#*{{RQ:BLwnds TLdgr|I}}
+#*{{RQ:BLwnds TLdgr|I|0016}}
 #*:Thus the red damask '''curtains''' which now shut out the fog-laden, drizzling atmosphere of the Marylebone Road, had cost a mere song, and yet they might have been warranted to last another thirty years. A great bargain also had been the excellent Axminster carpet which covered the floor; as, again, the arm-chair in which Bunting now sat forward, staring into the dull, small fire.
 #A similar piece of cloth that separates the [[audience]] and the [[stage]] in a [[theater]].
-#* {{quote-book|year=1905|author=[[w:Emma Orczy|Baroness Emmuska Orczy]]
+#*{{quote-book|year=1905|author=[[w:Emma Orczy|Baroness Emmuska Orczy]]
 |title=[[w:The Case of Miss Elliott|The Lisson Grove Mystery]]
 |chapter=2|url=http://openlibrary.org/works/OL8479084W
 |passage=“H'm&nbsp;!&rdquo; he said, &ldquo;so, so&mdash;it is a tragedy in a prologue and three acts. I am going down this afternoon to see the '''curtain''' fall for the third time on what{{...}}will prove a good burlesque&nbsp;; but it all began dramatically enough. It was last Saturday{{...}}that two boys, playing in the little spinney just outside Wembley Park Station, came across three large parcels done up in American cloth.{{nb...}}”}}
