--- a/en/c/cost.6840.wikitext
+++ b/en/c/cost.6840.wikitext
@@ -170,19 +170,19 @@ From {{etyl|enm|en}} {{m|enm|costen}}, from {{etyl|fro|en}} {{m|fro|coster}}, {{
 {{en-verb|costs|costing|cost|past2=costed}} See Usage notes.
 
 #To [[incur]] a [[charge]]; to require payment of a [[price]].
-#:''This shirt '''cost''' $50, while this was cheaper at only $30.''
-#:''It will '''cost''' you a lot of money to take a trip around the world.''
+#:{{ux|en|This shirt '''cost''' $50, while this was cheaper at only $30.}}
+#:{{ux|en|It will '''cost''' you a lot of money to take a trip around the world.}}
 #*{{RQ:BLwnds TLdgr|I}}
 #*:Thus the red damask curtains which now shut out the fog-laden, drizzling atmosphere of the Marylebone Road, had '''cost''' a mere song, and yet they might have been warranted to last another thirty years. A great bargain also had been the excellent Axminster carpet which covered the floor;{{nb...}}.
 #To cause something to be lost; to cause the expenditure or relinquishment of.
-#:''Trying to rescue the man from the burning building '''cost''' them their lives.''
+#:{{ux|en|Trying to rescue the man from the burning building '''cost''' them their lives.}}
 #*Shakespeare
 #*:though it '''cost''' me ten nights' watchings
-#{{context|obsolete|lang=en}} To require to be borne or suffered; to cause.
+#{{label|en|obsolete}} To require to be borne or suffered; to cause.
 #*Milton
 #*:to do him wanton rites, which '''cost''' them woe
 #To [[calculate]] or [[estimate]] a price.
-#:''I'd '''cost''' the repair work at a few thousand.''
+#:{{ux|en|I'd '''cost''' the repair work at a few thousand.}}
 
 =====Usage notes=====
 The past tense and past participle is ''cost'' in the sense of "this computer '''cost''' me £600", but ''costed'' in the sense of 'calculated', "the project was '''costed''' at $1 million."
