--- a/en/b/blond.6878.wikitext
+++ b/en/b/blond.6878.wikitext
@@ -53,7 +53,7 @@ Alternative etymology connects {{etyl|frk|-}} {{m|frk|*blund}} to {{etyl|gem-pro
 * Macedonian: {{t|mk|русокос|m|tr=rúsokos}}, {{t|mk|плав|m|tr=plav}}, {{t|mk|русокоса|f|tr=rusókosa}}, {{t|mk|плава|f|tr=pláva}}
 * Norwegian: {{t|no|lys(håret)}}, blond, {{t+|no|blondine}}
 * Polish: {{t+|pl|blondyn|m}}, {{t+|pl|blondynka|f}}
-* Portuguese: [[louro]], [[loiro]], [[laurícomo]], [[flavícomo]], [[fulvícomo]], [[blondícomo]], [[claricápilo]], [[alvo]]; "hypocorism" [[lourinho]], [[galeguinho]], [[blondinet]], [[clarinho]]
+* Portuguese: {{t|pt|loiro|m}}, {{t|pt|louro|m}}
 * Romanian: {{t+|ro|blondă}}
 * Russian: {{t+|ru|блондин|m|tr=blondín}}, {{t+|ru|блондинка|f|tr=blondínka}}
 * Scottish Gaelic: {{t|gd|bàn}}, [[fionn]] (of both males and females), [[fear#Scottish Gaelic|fear]] bàn {{g|m}}, [[bean#Scottish Gaelic|bean]] bhàn {{g|f}}
@@ -74,7 +74,7 @@ Alternative etymology connects {{etyl|frk|-}} {{m|frk|*blund}} to {{etyl|gem-pro
 * Japanese: {{t|ja|金髪|tr=kinpatsu|sc=Jpan}} {{qualifier|hair color}}
 * Persian: {{t+|fa|بور|sc=fa-Arab}}
 * Polish: {{t+|pl|blond|m}}
-* Portuguese: {{t|pt|loira|f}}, {{t+|pt|loiro}} {{qualifier|hair color}}
+* Portuguese: {{t+|pt|loiro|m}}
 {{trans-bottom}}
 
 ===Adjective===
