t+vec:[[xugar]] t+vec:[[zugar]] t+vec:[[xogar]] t+vec:[[zogar]] t+an:[[chugar]] ([[WT:EDIT|Assisted]]) <play#30521591>

--- a/en/p/play.8442.wikitext
+++ b/en/p/play.8442.wikitext
@@ -95,6 +95,7 @@ The noun is from {{etyl|enm|en}} {{term|pleye|lang=enm}}, from {{etyl|ang|en}} {
 {{trans-top|act in a manner such that one has fun}}
 * Aleut: {{t|ale|mikal}}
 * Arabic: {{t+|ar|لَعِبَ|tr=láʿiba|sc=Arab}}
+* Aragonese: {{t+|an|chugar}}
 * Aramaic:
 *: Syriac: {{t|syc|ܫܥܐ|tr=šʿa|sc=Syrc}}
 * Armenian: {{t|hy|խաղալ}}
@@ -167,6 +168,7 @@ The noun is from {{etyl|enm|en}} {{term|pleye|lang=enm}}, from {{etyl|ang|en}} {
 * Turkish: {{t+|tr|oynamak}}
 * Ukrainian: {{t+|uk|гра́ти}}
 * Urdu: {{t|ur|کھیلنا|tr=khelnā|sc=ur-Arab}}
+* Venetian: {{t|vec|xugar}}, {{t|vec|zugar}}, {{t|vec|xogar}}, {{t|vec|zogar}}
 * Vietnamese: {{t+|vi|chơi}}
 * Welsh: {{t+|cy|chwarae}}
 {{trans-bottom}}
