edit section 6.1 ([[WT:EDIT|Assisted]]) <倦#30526213>

--- a/en/倦/倦.11036.wikitext
+++ b/en/倦/倦.11036.wikitext
@@ -61,11 +61,9 @@
 ==Vietnamese==
 
 ===Han character===
-'''倦''' ([[quyện]], [[cuộn]])
+{{vi-hantu|[[quyện]], [[cuộn]]|rs=人08}}
 
 # {{defn|lang=vi}}
-
-[[Category:Vietnamese Han tu]]
 
 [[fr:倦]]
 [[ko:倦]]
