t+sv:[[känna]] ([[WT:EDIT|Assisted]]) <feel#30765769>

--- a/en/f/feel.6876.wikitext
+++ b/en/f/feel.6876.wikitext
@@ -135,7 +135,7 @@ From {{etyl|enm|en}} {{term|felen|lang=enm}}, from {{etyl|ang|en}} {{m|ang|fēla
 * Sorbian:
 *: Lower Sorbian: {{t|dsb|cuś}}
 * Spanish: {{t+|es|sentir}}, {{t+|es|tocar}}
-* Swedish: {{t-needed|sv}}
+* Swedish: {{t+|sv|känna}}
 * Turkish: {{t+|tr|hissetmek}}
 * ǃXóõ: {{t|nmn|ta̰ã}}
 {{trans-bottom}}
