/* Translations */ pt checked <skirt#30852754>

--- a/en/s/skirt.7203.wikitext
+++ b/en/s/skirt.7203.wikitext
@@ -253,7 +253,7 @@ From {{etyl|non|en}} {{term|skyrta|lang=non}}, from {{etyl|gem-pro|en}} {{m|gem-
 * Interlingua: {{t|ia|costear}}, {{t|ia|contornar}}
 * Maori: {{t|mi|taku}}
 {{trans-mid}}
-* Portuguese: {{t+|pt|rodear}}, {{t+|pt|contornar}}
+* Portuguese: {{t+|pt|rodear}}, {{t+|pt|contornar}}, {{t|pt|beirar}}
 * Russian: {{t+|ru|ограничивать}}
 * Serbo-Croatian:
 *: Cyrillic: {{t|sh|граничити|alt=граничити се}}
@@ -266,7 +266,6 @@ From {{etyl|non|en}} {{term|skyrta|lang=non}}, from {{etyl|gem-pro|en}} {{m|gem-
 * Esperanto: {{t-check|eo|preteriri}}
 * German: {{t-check|de|säumen}}
 {{trans-mid}}
-* Portuguese: {{t-check|pt|beirar}}
 {{trans-bottom}}
 
 ===Anagrams===
