t+ca:[[port]] ([[WT:EDIT|Assisted]]) <port#30865421>

--- a/en/p/port.1843.wikitext
+++ b/en/p/port.1843.wikitext
@@ -51,6 +51,7 @@ From {{etyl|ang|en}} {{term|port|lang=ang}}, from {{etyl|la|en}} {{term|portus||
 * Bengali: {{t|bn|পোর্ট|tr=porţ|sc=Beng}}
 * Bulgarian: {{t+|bg|порт|m|tr=port|sc=Cyrl}}, {{t+|bg|приста́нище|n|sc=Cyrl}}
 * Burmese: {{t+|my|သင်္ဘောဆိပ်|tr=thin: bo: zeí|sc=Mymr}}
+* Catalan: {{t+|ca|port|m}}
 * Chinese:
 *: Mandarin: {{t+|cmn|港|tr=gǎng|sc=Hani}}, {{t+|cmn|港口|tr=gǎngkǒu|sc=Hani}}, {{t+|cmn|口岸|tr=kǒu'àn|sc=Hani}}, {{t+|cmn|港埠|tr=gǎngbù|sc=Hani}}
 * Corsican: {{t+|co|portu|m}}
@@ -129,6 +130,7 @@ From {{etyl|ang|en}} {{term|port|lang=ang}}, from {{etyl|la|en}} {{term|portus||
 
 {{trans-top|town or city with a dock or harbour}}
 * Armenian: {{t|hy|նավահանգիստ|tr=navahangist}}
+* Catalan: {{t+|ca|port|m}}
 * Chinese:
 *: Mandarin: {{t+|cmn|港市|tr=gǎngshì|sc=Hani}}
 * Czech: {{t+|cs|přístav|m}}, {{t|cs|přístavní město|n}}
