--- a/en/旯/旯.16919.wikitext
+++ b/en/旯/旯.16919.wikitext
@@ -2,7 +2,7 @@
 ==Translingual==
 
 ===Han character===
-{{Han char|rn=72|rad=日|as=02|sn=6|four=6041<sub>7</sub>|canj=日大弓 (AKN)}}
+{{Han char|rn=72|rad=日|as=02|sn=6|four=6041<sub>7</sub>|canj=日大弓 (AKN)|ids=⿱[[日]][[九]]}}
 
 # {{defn|Han|sort=日02}}
 
