converted "Cantonese" and "Mandarin" sections into unified "Chinese" section <坦#31095442>

--- a/en/坦/坦.13033.wikitext
+++ b/en/坦/坦.13033.wikitext
@@ -11,12 +11,21 @@
 
 ----
 
-==Cantonese==
+==Chinese==
+{{zh-hanzi-box|[[坦]]}}
 
-===Hanzi===
-{{yue-hanzi|jyut=taan2|y=taan2}}
+===Pronunciation===
+{{zh-pron
+|m=tǎn
+|c=taan2
+|mc=y
+|oc=y
+|ma=
+|cat=a
+}}
 
-# {{defn|lang=yue|sort=土05}}
+====Compounds====
+* [[坦克]]
 
 ----
 
@@ -38,16 +47,6 @@
 {{ko-hanja|hangeul=탄|rv=tan|mr=t'an}}
 
 # {{defn|lang=ko|sort=土05}}
-
-----
-
-==Mandarin==
-
-===Hanzi===
-{{cmn-hanzi|pin=[[tǎn]] ([[tan3]])|wg=t'an<sup>3</sup>}}
-
-# {{defn|lang=cmn|sort=土05}}
-* [[坦克]]
 
 ----
 
