/* Translations */ <United States of America#31196140>

--- a/en/u/United States of America.2102.wikitext
+++ b/en/u/United States of America.2102.wikitext
@@ -68,12 +68,12 @@
 * Kyrgyz: {{t|ky|Америка Кошмо Штаттары|sc=Cyrl}}
 * Lakota: {{t|lkt|Mílahaŋska Tȟamákȟočhe}}
 * Lao: {{t|lo|ສະຫະລັດອະເມລິກາ|tr=sa ha lat 'a mē li kā|sc=Laoo}}
-{{trans-mid}}
 * Latgalian: {{t|ltg|Amerikys Saškiertuos Vaļsteibys}}, {{t|ltg|ASV}}
 * Latin: {{t|la|Civitates Foederatae Americae}}, {{t|la|Respublicae Unitae Americae}}, {{t|la|Status Uniti Americae}}
 * Latvian: {{t+|lv|Amerikas Savienotās Valstis}}, {{t|lv|ASV}}
 * Laz: {{t-needed|lzz}}
 * Lithuanian: {{t+|lt|Jungtinės Amerikos Valstijos}}, {{t+|lt|JAV}}
+{{trans-mid}}
 * Macedonian: {{t|mk|Соеди́нети Амери́кански Држа́ви|f-p}}, {{t|mk|САД|f-p}}
 * Malay: {{t|ms|Amerika Syarikat}}, {{t|ms|AS}}
 * Malayalam: {{t|ml|അമേരിക്കൻ ഐക്യനാടുകൾ|sc=Mlym}}
@@ -85,7 +85,8 @@
 * Navajo: {{t|nv|Wááshindoon bikéyah ałhidadiidzooígíí}}
 * Nepali: {{t|ne|संयुक्त राज्य अमेरिका|tr=sanyukta rājya amerikā|sc=Deva}}
 * Northern Sami: {{t|se|Amerihká ovttastuvvan stáhtat}}
-* Norwegian: {{t+|no|Amerikas forente stater}}, {{t|no|De forente stater}}
+* Norwegian: 
+*: Bokmål: {{t+|nb|Amerikas forente stater}}, {{t|nb|De forente stater}}
 * Nahuatl: {{t|nah|Tlacetilīlli Tlahtohcāyōtl Ixachitlān}}
 * Ossetian: {{t|os|Америкӕйы Иугонд Штаттӕ|sc=Cyrl}}
 * Palauan: {{t|pau|Merikel}}
