--- a/en/f/feel.6876.wikitext
+++ b/en/f/feel.6876.wikitext
@@ -27,9 +27,8 @@ From {{etyl|enm|en}} {{term|felen|lang=enm}}, from {{etyl|ang|en}} {{m|ang|fēla
 ##:{{ux|en|I can '''feel''' the sadness in his poems.}}
 ##*{{w|Alexander Pope}} (1688-1744)
 ##*:Teach me to '''feel''' another's woe.
-##*{{quote-book|year=1910|author={{w|Emerson Hough}}
-|title=[http://www.gutenberg.org/ebooks/11593 The Purchase Price]|chapter=1
-|passage=Captain Edward Carlisle, soldier as he was, martinet as he was, '''felt''' a curious sensation of helplessness seize upon him as he met her steady gaze, her alluring smile ; he could not tell what this prisoner might do.}}
+##*{{RQ:EHough PrqsPrc|I|0105}}
+##*:Captain Edward Carlisle, soldier as he was, martinet as he was, '''felt''' a curious sensation of helplessness seize upon him as he met her steady gaze, her alluring smile ; he could not tell what this prisoner might do.
 ##*{{quote-magazine|date=2013-08-10|volume=408|issue=8848|magazine={{w|The Economist}}|author=Lexington
 |title=[http://www.economist.com/news/united-states/21583274-new-wave-press-barons-should-not-allow-newspapers-become-niche-products-keeping Keeping the mighty honest]
 |passage=British journalists shun complete respectability, '''feeling''' a duty to be ready to savage the mighty, or rummage through their bins. Elsewhere in Europe, government contracts and subsidies ensure that press barons will only defy the mighty so far.}}
