--- a/en/坤/坤.13031.wikitext
+++ b/en/坤/坤.13031.wikitext
@@ -32,6 +32,11 @@
 ====Readings====
 * {{ja-readings|on=[[こん]] (kon)|kun=[[つち]] (tsuchi), [[ひつじさる]] (hitsujisaru)}}
 
+===Noun===
+{{ja-noun|ひつじさる}}
+
+# {{context|obsolete|lang=ja|sort=ひつじさる}} southwest
+
 ----
 
 ==Korean==
