--- a/en/坊/坊.13005.wikitext
+++ b/en/坊/坊.13005.wikitext
@@ -8,6 +8,8 @@
 # [[lane]] (as in a [[street]] [[name]])
 # [[memorial]] [[archway]]
 # a [[surname]]
+# [[piazza]]; [[square]]
+# [[workshop]]
 
 ====References====
 * {{Han ref|kx=0225.070|dkj=04924|dj=0459.270|hdz=10427.010|uh=574A|ud=22346|bh=A77B|bd=42875}}
