/* Norwegian Bokmål */ derived terms <felt#31311556>

--- a/en/f/felt.6877.wikitext
+++ b/en/f/felt.6877.wikitext
@@ -214,6 +214,7 @@ From {{etyl|de|nb}} {{term|Feld|lang=de}}
 # [[field]]
 
 =====Derived terms=====
+* {{l|nb|kjørefelt}}
 * {{l|nb|magnetfelt}}
 * {{l|nb|oljefelt}}
 
