--- a/en/c/cut.6843.wikitext
+++ b/en/c/cut.6843.wikitext
@@ -264,6 +264,7 @@ From {{etyl|enm|en}} {{term|cutten|lang=enm}}, {{term|kitten|lang=enm}}, {{term|
 * Finnish: {{t|fi|nosto}}
 * French: {{t+|fr|coupe|f}}
 {{trans-mid}}
+* Greek: {{t+|el|κόψιμο|n|sc=Grek}}
 * Italian: {{t+|it|alzata|f}}
 * Romanian: {{t|ro|tăiere|f}}
 * Swedish: {{t+|sv|giv|c}}
