/* See also */ <saffron#31470561>

--- a/en/s/saffron.4771.wikitext
+++ b/en/s/saffron.4771.wikitext
@@ -236,7 +236,7 @@ The distinction between the ''plant'' and ''spice'' senses is often blurred.
 * [[colchicum]]
 * [[crocus bag]]
 * [[crocus sack]]
-* [[turneric]]
+* [[turmeric]]
 * [[Appendix:Colors]]
 
 ===Verb===
