--- a/en/s/suck.8436.wikitext
+++ b/en/s/suck.8436.wikitext
@@ -157,7 +157,7 @@ From {{etyl|enm|en}} {{term|souken|souken, suken||lang=enm}}, from {{etyl|ang|en
 * Italian: {{t|it|essere una schiappa}}, {{t|it|fare schifo}}
 * Japanese: {{t|ja|サック|tr=sakku|sc=Jpan}}
 * Norwegian: {{t|no|suge}}
-* Portuguese: {{t+|pt|ser um saco}}, {{t+|pt|ser uma droga}}
+* Portuguese: {{t+|pt|[[ser]] [[um]] [[saco]]}}, {{t+|pt|[[ser]] [[uma]] [[droga]]}}
 * Russian: {{t+|ru|отстой|tr=otstój|sc=Cyrl}} {{qualifier|noun}}
 * Spanish: {{t|es|ser un asco}}, {{t|es|dar asco}}
 * Swedish: {{t+|sv|suga}}
