--- a/en/p/play.8442.wikitext
+++ b/en/p/play.8442.wikitext
@@ -122,7 +122,7 @@ The noun is from {{etyl|enm|en}} {{term|pleye|lang=enm}}, from {{etyl|ang|en}} {
 * Hindi: {{t|hi|खेलना|tr=khelnā|sc=Deva}}
 * Hungarian: {{t+|hu|játszik}}
 * Icelandic: {{t+|is|leika}}, {{t+|is|leika sér}}
-* Indonesian: {{t+|id|permainan}}, {{t+|id|bermain}}
+* Indonesian: {{t+|id|bermain}}
 * Interlingua: {{t|ia|jocar}}
 * Irish: {{t|ga|imir}}, {{t|ga|súgradh}}
 * Italian: {{t+|it|giocare}}
