--- a/en/p/play.8442.wikitext
+++ b/en/p/play.8442.wikitext
@@ -122,7 +122,7 @@ The noun is from {{etyl|enm|en}} {{term|pleye|lang=enm}}, from {{etyl|ang|en}} {
 * Hindi: {{t|hi|खेलना|tr=khelnā|sc=Deva}}
 * Hungarian: {{t+|hu|játszik}}
 * Icelandic: {{t+|is|leika}}, {{t+|is|leika sér}}
-* Indonesian: {{t+|id|bermain}}
+* Indonesian: {{t+|id|permainan}}, {{t+|id|bermain}}
 * Interlingua: {{t|ia|jocar}}
 * Irish: {{t|ga|imir}}, {{t|ga|súgradh}}
 * Italian: {{t+|it|giocare}}
@@ -193,6 +193,7 @@ The noun is from {{etyl|enm|en}} {{term|pleye|lang=enm}}, from {{etyl|ang|en}} {
 * Hindi: {{t|hi|बजाना|tr=bajānā|sc=Deva}}
 * Hungarian: {{t+|hu|játszik}} {{qualifier|noun specifying instrument in superessive case}}
 * Icelandic: {{t|is|spila}}, {{t|is|spila á}}
+* Indonesian: {{t+|id|bermain}}
 * Irish: {{t|ga|seinn}}
 * Italian: {{t+|it|suonare}}
 * Japanese: {{t|ja|演奏する|tr=えんそうする, ensō-suru|sc=Jpan}}, {{t|ja|奏でる|tr=かなでる, kanaderu|sc=Jpan}} {{qualifier|string instruments including piano}} {{t+|ja|弾く|tr=ひく, hiku|sc=Jpan}}, {{qualifier|wind instruments}} {{t|ja|吹く|tr=ふく, fuku|sc=Jpan}}, {{qualifier|drums}} {{t+|ja|叩く|tr=たたく, tataku|sc=Jpan}}
