t+id:[[membunyikan]] ([[WT:EDIT|Assisted]]) <play#31648273>

--- a/en/p/play.8442.wikitext
+++ b/en/p/play.8442.wikitext
@@ -239,7 +239,7 @@ The noun is from {{etyl|enm|en}} {{term|pleye|lang=enm}}, from {{etyl|ang|en}} {
 * Hebrew: {{t|he|ניגן|tr=nigén}}
 * Hungarian: {{t+|hu|játszik}}
 * Icelandic: {{t|is|spila}}
-* Indonesian: {{t+|id|bermain}}
+* Indonesian: {{t+|id|bermain}}, {{t+|id|membunyikan}}
 * Japanese: {{t+|ja|演奏|tr=えんそうする, ensō-suru|alt=演奏する|sc=Jpan}}
 {{trans-mid}}
 * Jèrriais: {{t|roa-jer|jouer}}, {{t|roa-jer|sonner}}
