t+id:[[permainan]] t+jv:[[dolanan]] t-balance ([[WT:EDIT|Assisted]]) <play#31648302>

--- a/en/p/play.8442.wikitext
+++ b/en/p/play.8442.wikitext
@@ -447,17 +447,19 @@ The noun is from {{etyl|enm|en}} {{term|pleye|lang=enm}}, from {{etyl|ang|en}} {
 * German: {{t+|de|Spiel|n}}
 * Hebrew: {{t+|he|משחק|m|tr=misḥāq}}, {{t|he|שעשוע|m|tr=shāʿāshuʿā}}
 * Hungarian: {{t+|hu|játék}}
+* Indonesian: {{t+|id|permainan}}
 * Irish: {{t|ga|imirt|f}}, {{t|ga|súgradh|m}}
 *: Old Irish: {{t|sga|spled}}
 * Italian: {{t+|it|gioco|m}}
 * Japanese: {{t+|ja|遊び|tr=あそび, asobi|sc=Jpan}}
+* Javanese: {{t+|jv|dolanan}}
 * Kurdish:
 *: Kurmanji: {{t+|ku|yarî|f}}, {{t+|ku|lîstik|f}}
 *: Sorani: {{t|ku|یاری|tr=yarî|sc=ku-Arab}}, {{t|ku|وازی|tr=wazí|sc=ku-Arab}}
 * Latgalian: {{t|ltg|kaita|f}}
+{{trans-mid}}
 * Latin: {{t|la|ludus|m}}
 * Latvian: {{t|lv|spēle|f}}, {{t|lv|rotaļa|f}}
-{{trans-mid}}
 * Macedonian: {{t|mk|игра|f|tr=ígra}}
 * Malayalam: {{t+|ml|കളി|tr=kaLi}}
 * Norwegian:
