--- a/en/u/United States of America.2102.wikitext
+++ b/en/u/United States of America.2102.wikitext
@@ -29,9 +29,9 @@
 * Chechen: {{t|ce|Американ Цхьанакхетта Штаташ}}
 * Cherokee: {{t|chr|ᏌᏊᎢᏳᎾᎵᏍᏔᏅᏍᎦᏚᎩ ᎾᎿ ᎠᎺᏰᏟ|sc=Cher}}
 * Chinese:
-*: Cantonese: {{t|yue|美利堅合眾國|tr=mei5lei6gin1hap6zung3gwok3|sc=Hani}}, {{t|yue|美國|tr=mei5gwok3|sc=Hani}}, {{t|yue|美|tr=mei5|sc=Hani}}
+*: Cantonese: {{t|yue|美利堅合眾國|sc=Hani}}, {{t|yue|美利坚合众国|tr=mei5 lei3 gin1 hap6 zong3 gwok3|sc=Hani}}, {{t|yue|美國|sc=Hani}}, {{t|yue|美国|tr=mei5 gwok3|sc=Hani}}, {{t|yue|美|tr=mei5|sc=Hani}}
 *: Mandarin: {{t+|cmn|美利堅合眾國|sc=Hani}}, {{t+|cmn|美利坚合众国|tr=Měilìjiān hézhòngguó|sc=Hani}}, {{t+|cmn|美國|sc=Hani}}, {{t+|cmn|美国|tr=Měiguó|sc=Hani}}, {{t+|cmn|美|tr=Měi-|sc=Hani}}
-*: Min Nan: {{t|nan|米國|sc=Hans}}, {{t+|nan|米国|tr=Bí-kok|sc=Hans}}
+*: Min Nan: {{t|nan|美國|sc=Hani}}, {{t|nan|美国|tr=Bí-kok|sc=Hani}}, {{t|nan|米國|sc=Hani}}, {{t+|nan|米国|tr=Bí-kok|sc=Hani}}
 * Czech: {{t+|cs|Spojené státy americké|m-p}}, {{t|cs|Spojené státy|m-p}}
 * Danish: {{t|da|Amerikas Forenede Stater}}, {{t|da|Forenede Stater}}
 * Dutch: {{t+|nl|Verenigde Staten van Amerika|f-p}}, {{t+|nl|Verenigde Staten}}, {{t|nl|VS}}
@@ -46,7 +46,7 @@
 * Greek: {{t+|el|Ηνωμένες Πολιτείες της Αμερικής|f-p}} {{qualifier|official}}, {{t|el|Ηνωμένες Πολιτείες Αμερικής|f-p}}, {{t+|el|Ηνωμένες Πολιτείες|f-p}}, {{t+|el|ΗΠΑ|f-p|tr=IPA}}
 * Gujarati: {{t|gu|સંયુકત રાજ્ય અમેરિકા|tr=sanyukat rājya amērikā|sc=Gujr}}
 * Hawaiian: {{t|haw|ʻAmelika Huipūʻia}}, {{t|haw|ʻAmelika Hui}}
-* Hebrew: {{t|he|אַרְצוֹת הַבְּרִית שֶׁל אָמֶרִיקָה|tr=artsot ha-brit shel amérika}}, {{t+|he|אַרְצוֹת הַבְּרִית|f-p|tr=artsot ha-brit}}, {{t|he|ארה״ב|tr=arh-B}}
+* Hebrew: {{t|he|אַרְצוֹת הַבְּרִית שֶׁל אָמֶרִיקָה|tr=artsot ha-brit shel amérika}}, {{t+|he|אַרְצוֹת הַבְּרִית|f-p|tr=artsot ha-brit}}, {{t|he|ארה״ב|tr=arh"b}}
 * Hiligaynon: {{t-needed|hil}}
 * Hindi: {{t|hi|संयुक्त राज्य अमरीका|tr=sanyukta rājya amrīkā}}, {{t|hi|संयुक्त राष्ट्र अमरीका|tr=sanyukta rāṣṭra amrīkā}}
 * Hungarian: {{t+|hu|Amerikai Egyesült Államok}}, {{t+|hu|Egyesült Államok}}, {{t+|hu|USA}}
