t+fr:[[nombre]] t+it:[[numero]] t+pt:[[número]] t+es:[[número]] ([[WT:EDIT|Assisted]]) <count#31808153>

--- a/en/c/count.8441.wikitext
+++ b/en/c/count.8441.wikitext
@@ -219,21 +219,21 @@ From {{etyl|enm|en}} {{term|counten|lang=enm}}, from {{etyl|xno|en}} {{term|cont
 * Danish: {{t|da|optælling}}
 * Dutch: {{t+|nl|telling|f}}
 * Finnish: {{t+|fi|määrä}}
-* French: {{t+|fr|compte|m}}
+* French: {{t+|fr|compte|m}}, {{t+|fr|nombre}}
 *: Old French: {{t|fro|conte}}
 * German: {{t+|de|Anzahl|f}}
 {{trans-mid}}
 * Icelandic: {{t+|is|tala|f}}
 * Ido: {{t+|io|konto}}
-* Italian: {{t|it|totale|m}}
+* Italian: {{t|it|totale|m}}, {{t+|it|numero}}
 * Kyrgyz: {{t+|ky|эсеп}}
 * Middle English: {{t|enm|counte}}
 * Navajo: {{t|nv|nambooígíí}}
-* Portuguese: {{t+|pt|contagem|f}}
+* Portuguese: {{t+|pt|contagem|f}}, {{t+|pt|número}}
 * Romanian: {{t+|ro|numărare|f}}
 * Russian: {{t+|ru|счёт|m}}
 * Slovene: {{t|sl|rezultat|m}}
-* Spanish: {{t|es|conteo|m}}
+* Spanish: {{t|es|conteo|m}}, {{t+|es|número}}
 {{trans-bottom}}
 
 {{trans-top|a countdown}}
