--- a/en/c/come.6838.wikitext
+++ b/en/c/come.6838.wikitext
@@ -481,7 +481,7 @@ Cognate to French {{term|comme|lang=fr}}. See also Spanish {{term|como|lang=es}}
 * {{IPA|/ˈkome/|lang=es}}
 
 ===Verb===
-{{es-verb-form|comer}}
+{{es-verb-form}}
 
 # {{inflection of|comer||3|s|pres|indc|lang=es}}
 # {{inflection of|comer||2|s|pres|impr|lang=es}}
