edit section 3.2 ([[WT:EDIT|Assisted]]) <昼#31900096>

--- a/en/昼/昼.16997.wikitext
+++ b/en/昼/昼.16997.wikitext
@@ -44,7 +44,7 @@
 * {{l|ja|真昼}}
 
 ===Noun===
-{{ja-noun|k|hira=ひる|rom=hiru}}
+{{ja-noun|ひる}}
 
 # [[noon]] (12 p.m.)
 # [[daytime]]
@@ -52,8 +52,7 @@
 
 [[Category:1000 Japanese basic words|ひる]]
 [[Category:ja:Time|ひる]]
-[[Category:Japanese terms written with one Han script character]]
-[[Category:Japanese terms spelled with 昼]]
+
 ----
 
 ==Korean==
