/* Translations */ <Czech Republic#31905441>

--- a/en/c/Czech Republic.2104.wikitext
+++ b/en/c/Czech Republic.2104.wikitext
@@ -16,7 +16,7 @@
 * [[CZE]]
 
 ====Translations====
-{{trans-top|country in Central Europe}}
+{{trans-top-also|country in Central Europe|Czechia}}
 * Afrikaans: {{t|af|Tsjeggiese Republiek}}, {{t|af|Tsjeggië}}
 * Arabic: {{t|ar|جمهورية التشيك|f|tr=jumhūriyyat al-tšik|sc=Arab}}, {{t|ar|التشيك|m|tr=al-tšīk, al-tšek|sc=Arab}}
 * Armenian: {{t|hy|Չեխիայի Հանրապետություն|sc=Armn}}, {{t|hy|Չեխիա|sc=Armn}}
