t+tts:[[{{t-needed}}]] t+nod:[[{{t-needed}}]] t+sou:[[{{t-needed}}]] t+za:[[{{t-needed}}]] ([[WT:EDIT|Assisted]]) <beautiful#31907862>

--- a/en/b/beautiful.7394.wikitext
+++ b/en/b/beautiful.7394.wikitext
@@ -99,6 +99,7 @@ The comparatives '''[[beautifuler]]''' and '''[[beautifuller]]''', and the super
 * Indonesian: {{t+|id|indah}}, {{t+|id|cantik}}, {{t+|id|ayu}}, {{t+|id|molek}}, {{t+|id|cakep}}
 * Interlingua: {{t|ia|belle}}
 * Irish: {{t|ga|álainn}}, {{t|ga|spéiriúil}}
+* Isan: {{t-needed|tts}}
 * Istriot: {{t|ist|biel|m}}, {{t|ist|biela|f}}
 * Italian: {{t+|it|bello|m}}, {{t+|it|bella|f}}
 * Japanese: {{t+|ja|美しい|tr=うつくしい, utsukushii}}, {{t|ja|綺麗|tr=きれい, kirei}}, {{t+|ja|素敵|tr=すてき, suteki}}
@@ -125,6 +126,7 @@ The comparatives '''[[beautifuler]]''' and '''[[beautifuller]]''', and the super
 * Mazanderani: {{t|mzn|قشنگ}}, {{t|mzn|خجیر}}
 * Mongolian: {{t|mn|сайхан|sc=Cyrl}}
 * Navajo: {{t|nv|nizhóní}}, {{t|nv|nizhóní yeeʼ}}
+* Northern Thai: {{t-needed|nod}}
 * Novial: {{t|nov|beli}}
 * Occitan: {{t+|oc|bèl|m}}, {{t+|oc|bèla|f}}, {{t+|oc|bèu|m}}
 * Old Church Slavonic: {{t|cu|красьнъ|sc=Cyrs}}
@@ -150,6 +152,7 @@ The comparatives '''[[beautifuler]]''' and '''[[beautifuller]]''', and the super
 * Slovene: {{t+|sl|lep}}
 * Sorbian:
 *: Lower Sorbian: {{t|dsb|rědny}}
+* Southern Thai: {{t-needed|sou}}
 * Spanish: {{t+|es|hermoso|m}}, {{t+|es|hermosa|f}}, {{t+|es|bello|m}}, {{t-check|es|bella|m}} [[lindo]], {{t+|es|linda|f}}, {{t+|es|guapo|m}}, {{t+|es|guapa|f}}, {{t+|es|bonito|m}}, {{t+|es|bonita|f}}
 * Swahili: {{t+|sw|zuri}}
 * Swedish: {{t+|sv|fin}}, {{t+|sv|vacker}}
@@ -172,6 +175,7 @@ The comparatives '''[[beautifuler]]''' and '''[[beautifuller]]''', and the super
 * Welsh: {{t+|cy|hardd}}, {{t+|cy|prydferth}}
 * West Frisian: {{t|fy|moai}}, {{t|fy|kreas}}
 * Yiddish: {{t|yi|שיין|sc=Hebr}}
+* Zhuang: {{t-needed|za}}
 {{trans-bottom}}
 
 {{trans-top|of weather: pleasant, clear}}
