--- a/en/傘/傘.11179.wikitext
+++ b/en/傘/傘.11179.wikitext
@@ -4,19 +4,31 @@
 ===Han character===
 {{Han char|rn=9|rad=人|as=10|sn=12|four=8040<sub>8</sub>|canj=人人人十 (OOOJ)|ids=⿱[[人]]⿻⿰[[仌]]仌[[十]]}}
 
-# [[umbrella]], [[parasol]], [[parachute]]
+# [[umbrella]], [[parasol]]
+# [[parachute]]
 
 ====References====
 * {{Han ref|kx=0113.200|dkj=00966|dj=0241.100|hdz=10198.130|uh=5098|ud=20632|bh=B3CA|bd=46026}}
 
 ----
 
-==Cantonese==
+==Chinese==
+{{zh-hanzi-box|[[伞]]|傘}}
 
-===Hanzi===
-{{yue-hanzi|jyut=[[saan3]]|y=[[saan3]]|sim=伞}}
+===Pronunciation===
+{{zh-pron
+|m=sǎn
+|c=saan3
+|mc=y
+|oc=y
+|ma=
+|cat=n
+}}
 
-# {{defn|lang=yue|sort=人10}}
+===Noun===
+{{zh-noun|t}}
+
+# [[umbrella]]
 
 ----
 
@@ -68,18 +80,6 @@
 ====Compounds====
 * [[雨傘]] ([[우산]], usan)
 * [[日傘]] ([[일산]], ilsan)
-
-----
-
-==Mandarin==
-
-===Hanzi===
-{{cmn-hanzi|sim=伞|pin=[[sǎn]] ([[san3]])|wg=[[san3|san<sup>3</sup>]]}}
-
-===Noun===
-{{cmn-noun|t|sim=伞|pin=sǎn|pint=san3}}
-
-# [[umbrella]]
 
 ----
 
