--- a/en/c/cut.6843.wikitext
+++ b/en/c/cut.6843.wikitext
@@ -801,20 +801,20 @@ From {{etyl|poz-swa-pro|kyi}} {{m|poz-swa-pro|*likud}}, from {{etyl|poz-pro|kyi}
 ==Welsh==
 
 ===Pronunciation===
-* {{a|North Wales}} {{IPA|/kɨ̞t/|lang=cy}}
-* {{a|South Wales}} {{IPA|/kɪt/|lang=cy}}
+* {{a|cy-N}} {{IPA|/kɨ̞t/|lang=cy}}
+* {{a|cy-S}} {{IPA|/kɪt/|lang=cy}}
 
 ===Noun===
 {{cy-noun|m|cutiau}}
 
 # [[shed]], [[hut]]
 
-====Mutation====
-{{cy-mut-c|ut}}
-
 ====Derived terms====
 * {{l|cy|cut ieir}}
 * {{l|cy|cut moch}}
+
+===Mutation===
+{{cy-mut-c|ut}}
 
 [[ar:cut]]
 [[az:cut]]
