t+wa:[[coxhe]] t+wa:[[brantche]] t+wa:[[fotche]] ([[WT:EDIT|Assisted]]) <branch#31908872>

--- a/en/b/branch.7390.wikitext
+++ b/en/b/branch.7390.wikitext
@@ -130,6 +130,7 @@ From {{etyl|enm|en}} {{term|branche|lang=enm}}, {{term|braunche|lang=enm}}, {{te
 * Ukrainian: {{t|uk|вітка|f|tr=vítka|sc=Cyrl}}, {{t+|uk|галузь|f|tr=halúzʹ|sc=Cyrl}}, {{t|uk|галузка|f|tr=halúzka|sc=Cyrl}}, {{t|uk|гілка|f|tr=hílka|sc=Cyrl}}, {{t|uk|гілочка|f|tr=híločka|sc=Cyrl}}
 * Uzbek: {{t+|uz|boʻlim}}
 * Vietnamese: {{t+|vi|nhánh}}
+* Walloon: {{t+|wa|coxhe|f}}
 * ǃXóõ: {{qualifier|small one}} {{t|nmn|gǀkxʻāa-kú}}
 {{trans-bottom}}
 
@@ -157,6 +158,7 @@ From {{etyl|enm|en}} {{term|branche|lang=enm}}, {{term|braunche|lang=enm}}, {{te
 * Tagalog: {{t|tl|sangay}}
 * Tok Pisin: {{t+|tpi|han}}
 * Turkish: {{t+|tr|dal}}
+* Walloon: {{t|wa|brantche|f}}, {{t+|wa|fotche|f}}
 {{trans-bottom}}
 
 {{trans-top|office of an organization with several locations}}
@@ -218,6 +220,7 @@ From {{etyl|enm|en}} {{term|branche|lang=enm}}, {{term|braunche|lang=enm}}, {{te
 * Telugu: {{t+|te|శాఖ}}
 * Turkish: {{t+|tr|dal}}
 * Vietnamese: {{t+|vi|nhánh}}
+* Walloon: {{t+|wa|coxhe|f}}, {{t|wa|brantche|f}}
 {{trans-bottom}}
 
 {{trans-top|certificate given by Trinity House}}
