t+wa:[[fortcheure]] ([[WT:EDIT|Assisted]]) <branch#31908874>

--- a/en/b/branch.7390.wikitext
+++ b/en/b/branch.7390.wikitext
@@ -158,7 +158,7 @@ From {{etyl|enm|en}} {{term|branche|lang=enm}}, {{term|braunche|lang=enm}}, {{te
 * Tagalog: {{t|tl|sangay}}
 * Tok Pisin: {{t+|tpi|han}}
 * Turkish: {{t+|tr|dal}}
-* Walloon: {{t|wa|brantche|f}}, {{t+|wa|fotche|f}}
+* Walloon: {{t|wa|brantche|f}}, {{t+|wa|fotche|f}}, {{t+|wa|fortcheure|f}}
 {{trans-bottom}}
 
 {{trans-top|office of an organization with several locations}}
