--- a/en/u/United States of America.2102.wikitext
+++ b/en/u/United States of America.2102.wikitext
@@ -1,3 +1,5 @@
+The United States of America is a country in north Central of North America and borders Mexico and Canada
+
 ==English==
 [[Image:Flag of the United States.svg|right|thumb|250px|The flag of the '''United States of America''']]
 
