converted "Cantonese" and "Mandarin" sections into unified "Chinese" section <倫#31911262>

--- a/en/倫/倫.11047.wikitext
+++ b/en/倫/倫.11047.wikitext
@@ -15,12 +15,18 @@
 
 ----
 
-==Cantonese==
+==Chinese==
+{{zh-hanzi-box|[[伦]]|倫}}
 
-===Hanzi===
-{{yue-hanzi|jyut=|y=[[leun4]]|sim=伦}}
-
-# {{defn|lang=yue|sort=人08}}
+===Pronunciation===
+{{zh-pron
+|m=lún
+|c=leon4
+|mc=y
+|oc=y
+|ma=
+|cat=n
+}}
 
 ----
 
@@ -49,6 +55,7 @@
 {{mid3}}
 *{{l|ja|sc=Jpan|絶倫|tr=ぜつりん, zetsurin}}
 {{bottom}}
+
 ----
 
 ==Korean==
@@ -57,15 +64,6 @@
 {{ko-hanja|hangeul=륜|rv=ryun|mr=ryun}}
 
 # {{defn|lang=ko|sort=人08}}
-
-----
-
-==Mandarin==
-
-===Hanzi===
-{{cmn-hanzi|sim=伦|pin=[[lún]] ([[lun2]]), [[wō]] ([[wo1]]), [[wǒ]] ([[wo3]])|wg=[[lun2|lun<sup>2</sup>]], [[wo1|wo<sup>1</sup>]], [[wo3|wo<sup>3</sup>]]}}
-
-# {{defn|lang=cmn|sort=人08}}
 
 ----
 
