converted "Cantonese" and "Mandarin" sections into unified "Chinese" section <傖#31911272>

--- a/en/傖/傖.11177.wikitext
+++ b/en/傖/傖.11177.wikitext
@@ -11,12 +11,18 @@
 
 ----
 
-==Cantonese==
+==Chinese==
+{{zh-hanzi-box|[[伧]]|傖}}
 
-===Hanzi===
-{{yue-hanzi|jyut=|y=chaang4, chong1|sim=伧}}
-
-# {{defn|lang=yue|sort=人10}}
+===Pronunciation===
+{{zh-pron
+|m=cāng
+|c=caang4,cong1
+|mc=y
+|oc=y
+|ma=
+|cat=n
+}}
 
 ----
 
@@ -38,15 +44,6 @@
 {{ko-hanja|hangeul=[[창]]|rv=chang|mr=ch'ang}}
 
 # {{defn|lang=ko|sort=人10}}
-
-----
-
-==Mandarin==
-
-===Hanzi===
-{{cmn-hanzi|sim=伧|pin=[[cāng]] ([[cang1]])|wg=ts'ang<sup>1</sup>}}
-
-# {{defn|lang=cmn|sort=人10}}
 
 [[fr:傖]]
 [[ko:傖]]
