--- a/en/偽/偽.11149.wikitext
+++ b/en/偽/偽.11149.wikitext
@@ -1,12 +1,10 @@
-{{also|伪}}
+{{also|伪|僞}}
 ==Translingual==
 
 ===Han character===
 {{Han char|rn=9|rad=人|as=09|sn=11|four=2222<sub>7</sub>|canj=人戈大火 (OIKF)|ids=⿰[[亻]][[為]]}}
 
 # [[false]], [[counterfeit]], [[bogus]]
-
-Variant: [[僞]]
 
 ====References====
 * {{Han ref|kx=0112.071|dkj=00927|hdz=10195.040|uh=507D|ud=20605|bh=B0B0|bd=45232}}
