--- a/en/偽/偽.11149.wikitext
+++ b/en/偽/偽.11149.wikitext
@@ -12,39 +12,21 @@
 ----
 
 ==Chinese==
-{{zh-hanzi-box|[[伪]]|偽/[[僞]]}}
+{{zh-forms|s=伪|t2=僞|false}}
 
 ===Pronunciation===
 {{zh-pron
 |m=wěi
 |c=ngai6
-|mc=
+|mn=gūi
+|w=2hhue
+|mc=y
 |oc=y
-|ma=
 |cat=a
 }}
 
-<!-- needs conversion to traditional form
-
-====Compounds====
-* {{l|cmn|伪钞}}
-* {{l|cmn|伪军}}
-* {{l|cmn|伪君子|tr=wěijūnzǐ}}
-* {{l|cmn|伪劣}}
-* {{l|cmn|伪麻黄碱|tr=wěimáhuángjiǎn}}
-* {{l|cmn|伪善|tr=wěishàn}}
-* {{l|cmn|伪饰}}
-* {{l|cmn|伪书}}
-* {{l|cmn|伪托}}
-* {{l|cmn|伪造|tr=wěizào}}
-* {{l|cmn|伪证|tr=wěizhèng}}
-* {{l|cmn|伪政府}}
-* {{l|cmn|伪撰}}
-* {{l|cmn|伪装|tr=wěizhuāng}}
-* {{l|cmn|伪足}}
-* {{l|cmn|伪作}}
-* {{l|cmn|虚伪|tr=xūwěi}} 
--->
+===Definitions===
+# {{alternative spelling of|僞|lang=zh}}
 
 ----
 
