--- a/en/i/i_e_.7209.wikitext
+++ b/en/i/i_e_.7209.wikitext
@@ -2,7 +2,7 @@
 ==English==
 
 ===Etymology===
-From {{etyl|la|en}} {{term|i.e.|lang=la}}, an abbreviation of {{term|lang=la|id est||that is}}.
+From {{etyl|la|en}} {{term|i.e.|lang=la}}, an abbreviation of {{term|lang=la|id est||it is}}.
 
 ===Pronunciation===
 * {{a|RP|US}} {{IPA|/ˌaɪˈiː/|lang=en}}
