--- a/en/i/i_e_.7209.wikitext
+++ b/en/i/i_e_.7209.wikitext
@@ -89,7 +89,7 @@ i.e. differs from [[viz.]] in that what follows merely restates what was said in
 ===Abbreviation===
 {{head|la|abbreviation}}
 
-# [[id est]] (that is; in other words)
+# [[id est]] (it is; in other words)
 
 [[bg:i.e.]]
 [[cs:i.e.]]
