t+su:[[lempeng]] ([[WT:EDIT|Assisted]]) <straight#31917521>

--- a/en/s/straight.7217.wikitext
+++ b/en/s/straight.7217.wikitext
@@ -189,6 +189,7 @@
 * Sorbian:
 *: Lower Sorbian: {{t|dsb|rowny}}
 * Spanish: {{t+|es|recto}}, {{t+|es|liso}} {{qualifier|hair}}
+* Sundanese: {{t|su|lempeng}}
 * Swedish: {{t+|sv|rak}}
 * Urdu: {{t|ur|سیدھا|tr=sīdhā|sc=ur-Arab}}
 * Venetian: {{t|vec|dirito}}
