--- a/en/c/curve.7392.wikitext
+++ b/en/c/curve.7392.wikitext
@@ -83,7 +83,7 @@ From {{etyl|la|en}} {{term|curvus||lang=la|bent, curved}}
 * Hebrew: {{t|he|עקימה|f|tr='aqima}}
 * Ido: {{t+|io|kurvo}}
 {{trans-mid}}
-* Indonesian: {{t+|id|lengkung}}
+* Indonesian: {{t+|id|lengkungan}}
 * Italian: {{t+|it|curva|f}}
 * Japanese: {{t+|ja|曲線|tr=きょくせん, kyokusen}}
 * Latvian: {{t|lv|līkums|m}}
