t+su:[[raheut]] ([[WT:EDIT|Assisted]]) <cut#31929097>

--- a/en/c/cut.6843.wikitext
+++ b/en/c/cut.6843.wikitext
@@ -207,6 +207,7 @@ From {{etyl|enm|en}} {{term|cutten|lang=enm}}, {{term|kitten|lang=enm}}, {{term|
 * Russian: {{t+|ru|поре́з|m|sc=Cyrl|tr=poréz}} ''wound'', {{t+|ru|разре́з|m|sc=Cyrl|tr=razréz}}
 * Scottish Gaelic: {{t|gd|gearradh|m}}
 * Spanish: {{t+|es|corte|m}}
+* Sundanese: {{t|su|raheut}}
 * Swedish: {{t+|sv|skärsår|n}}
 * Tagalog: {{t|tl|hiwa}}
 * Turkish: {{t+|tr|kesik}}
