--- a/en/c/come.6838.wikitext
+++ b/en/c/come.6838.wikitext
@@ -233,7 +233,7 @@ The collocations “[[come with]]” and “[[come along]]” mean {{term|accomp
 * Slovak: {{t|sk|prichádzať|impf}}, {{t|sk|prísť|pf}}
 * Slovene: {{t+|sl|priti|pf}}
 * Sorbian:
-*: Lower Sorbian: {{t|dsb|pśiś}}
+*: Lower Sorbian: {{t|dsb|pśiś}}, {{t|dsb|póraś|impf|alt=se póraś}}
 * Spanish: {{t+|es|venir}}
 * Swahili: {{t|sw|kuja}}
 * Swedish: {{t+|sv|komma}}
@@ -278,7 +278,7 @@ The collocations “[[come with]]” and “[[come along]]” mean {{term|accomp
 * Scottish Gaelic: {{t|gd|thig}}
 * Serbo-Croatian: {{t|sh|doći}}
 * Sorbian:
-*: Lower Sorbian: {{t|dsb|pśiś}}
+*: Lower Sorbian: {{t|dsb|pśiś}}, {{t|dsb|póraś|impf|alt=se póraś}}
 * Tunisian Arabic: {{t|aeb|وصل|tr=wuṣil|sc=Arab}}
 * Zulu: {{t|zu|fika|alt=-fika}}
 {{trans-bottom}}
