--- a/en/c/catch.6830.wikitext
+++ b/en/c/catch.6830.wikitext
@@ -188,126 +188,122 @@ The pronunciation /kɛtʃ/ started out as the unstressed variant of /kætʃ/ but
 ===Verb===
 {{en-verb|catches|catching|caught}}
 
-# To capture, overtake.
-## {{context|transitive|lang=en}} To [[capture]] or [[snare]] (someone or something which would rather escape). {{jump|capture prey|s}} {{defdate|from 13th c.}}
+#{{lb|en|heading}} ''To capture, overtake.''
+##{{lb|en|transitive}} To [[capture]] or [[snare]] (someone or something which would rather escape). {{jump|capture prey|s}} {{defdate|from 13th c.}}
 ##: ''I hope I '''catch''' a fish.''
 ##: ''He ran but we '''caught''' him at the exit.''
 ##: ''The police '''caught''' the robber at a nearby casino.''
-## {{context|transitive|lang=en}} To [[entrap]] or [[trip up]] a person; to [[deceive]]. {{defdate|from 14th c.}}
-##* '''1611''', ''[[w:Authorized King James Version|Authorized King James Version]]'', [[wikisource:Bible_(King_James)/Mark#Chapter_12|Mark 12:13]]:
-##*: And they send unto him certain of the Pharisees and of the Herodians, to '''catch''' him in his words.
-## {{context|transitive|figuratively|dated|lang=en}} To [[marry]] or enter into a similar [[relationship]] with.
-##* '''1933''', [[w:Sinclair Lewis|Sinclair Lewis]], ''Ann Vickers'', page 108, [url=http://books.google.com/books?id=NF5JAAAAMAAJ]:
-##*: The public {{...}} said that Miss Bogardus was a suffragist because she had never '''caught''' a man; that she wanted something, but it wasn't the vote.
-##* '''2006''', Michael Collier and Georgia Machemer, ''Medea'', page 23, [url=http://books.google.com/books?id=XKDr4vXVbvIC|isbn=0195145666]:
-##*: As for Aspasia, concubinage with Pericles brought her as much honor as she could hope to claim in Athens. {{...}} from the moment she '''caught''' her man, this influential, unconventional woman became a lightning rod {{...}}
-## {{context|transitive|lang=en}} To reach (someone) with a [[strike]], [[blow]], weapon etc. {{defdate|from 16th c.}}
+##{{lb|en|transitive}} To [[entrap]] or [[trip up]] a person; to [[deceive]]. {{defdate|from 14th c.}}
+##*'''1611''', ''[[w:Authorized King James Version|Authorized King James Version]]'', [[wikisource:Bible_(King_James)/Mark#Chapter_12|Mark 12:13]]:
+##*:And they send unto him certain of the Pharisees and of the Herodians, to '''catch''' him in his words.
+##{{lb|en|transitive|figuratively|dated}} To [[marry]] or enter into a similar [[relationship]] with.
+##*'''1933''', [[w:Sinclair Lewis|Sinclair Lewis]], ''Ann Vickers'', page 108, [url=http://books.google.com/books?id=NF5JAAAAMAAJ]:
+##*:The public{{...}}said that Miss Bogardus was a suffragist because she had never '''caught''' a man; that she wanted something, but it wasn't the vote.
+##*'''2006''', Michael Collier and Georgia Machemer, ''Medea'', p.23, [http://books.google.com/books?id=XKDr4vXVbvIC|isbn=0195145666]:
+##*:As for Aspasia, concubinage with Pericles brought her as much honor as she could hope to claim in Athens.{{...}}from the moment she '''caught''' her man, this influential, unconventional woman became a lightning rod{{nb...}}.
+##{{lb|en|transitive}} To reach (someone) with a [[strike]], [[blow]], weapon etc. {{defdate|from 16th c.}}
 ##: ''If he '''catches''' you on the chin, you'll be on the mat.''
-##* {{quote-news
-|year=2011
-|date=September 28
-|author=Jon Smith
-|title=Valencia   1 - 1   Chelsea
+##*{{quote-news|year=2011|date=September 28|author=Jon Smith
+|title=Valencia 1-1 Chelsea
 |work=BBC Sport
 |url=http://news.bbc.co.uk/sport2/hi/football/europe/14998331.stm
-|page=
 |passage=The visitors started brightly and had an early chance when Valencia's experienced captain David Albeda gifted the ball to Fernando Torres, but the striker was '''caught''' by defender Adil Rami as he threatened to shoot.}}
-## {{context|transitive|lang=en}} To [[overtake]] or [[catch up]] to; to be in time for. {{defdate|from 17th c.}}
+##{{lb|en|transitive}} To [[overtake]] or [[catch up]] to; to be in time for. {{defdate|from 17th c.}}
 ##: ''If you leave now you might '''catch''' him.''
 ##: ''I would love to have dinner but I have to '''catch''' a plane.''
-## {{context|transitive|lang=en}} To [[discover]] unexpectedly; to [[surprise]] (someone doing something). {{defdate|from 17th c.}}
+##{{lb|en|transitive}} To [[discover]] unexpectedly; to [[surprise]] (someone doing something). {{defdate|from 17th c.}}
 ##: ''He was '''caught''' on video robbing the bank.''
 ##: ''He was '''caught''' in the act of stealing a biscuit.''
-## {{context|transitive|lang=en}} To [[travel]] by means of. {{defdate|from 19th c.}}
+##{{lb|en|transitive}} To [[travel]] by means of. {{defdate|from 19th c.}}
 ##: '''''catch''' the bus''
-##* '''1987''', [[w:A.J. Quinnell|A.J. Quinnell]], ''In the Name of the Father'', page 111, [url=http://books.google.com/books?id=GJc1izYyDIkC|isbn=0453005713]:
+##*'''1987''', {{w|A.J. Quinnell}}, ''In the Name of the Father'', p.111, [url=http://books.google.com/books?id=GJc1izYyDIkC|isbn=0453005713]:
 ##*: After about a kilometer I '''caught''' a taxi to Santa Croce.
-## {{context|transitive|rare|lang=en}} To become [[pregnant]]. (Only in past tense or as participle.) {{defdate|from 19th c.}}
-##* '''2002''', Orpha Caton, ''Shadow on the Creek'', page 102-103, [url=http://books.google.com/books?id=GmLXMp0c3NMC|isbn1591602653]:
-##*: Had Nancy got '''caught''' with a child? If so she would destroy her parent's dreams for her.
-# To seize hold of.
-## {{context|transitive|dated|lang=en}} To [[grab]], [[seize]], take hold of. {{defdate|from 13th c.}}
-##* '''1590''', {{w|Edmund Spenser}}, ''The Faerie Queene'', III.2:
-##*: Her aged Nourse, whose name was Glaucè hight, / Feeling her leape out of her loathed nest, / Betwixt her feeble armes her quickly '''keight''' [...].
+##{{lb|en|transitive|rare}} To become [[pregnant]]. (Only in past tense or as participle.) {{defdate|from 19th c.}}
+##*'''2002''', Orpha Caton, ''Shadow on the Creek'', pp.102-103: [url=http://books.google.com/books?id=GmLXMp0c3NMC|isbn1591602653]:
+##*:Had Nancy got '''caught''' with a child? If so she would destroy her parent's dreams for her.
+#{{lb|en|heading}} ''To seize hold of.''
+##{{lb|en|transitive|dated}} To [[grab]], [[seize]], take hold of. {{defdate|from 13th c.}}
+##*'''1590''', {{w|Edmund Spenser}}, ''The Faerie Queene'', III.2:
+##*:Her aged Nourse, whose name was Glaucè hight, / Feeling her leape out of her loathed nest, / Betwixt her feeble armes her quickly '''keight'''{{nb...}}.
 ##: ''I '''caught''' her by the arm and turned her to face me.''
-## {{context|transitive|lang=en}} To [[take]] or [[replenish]] something necessary, such as [[breath]] or [[sleep]]. {{defdate|from 14th c.}}
+##{{lb|en|transitive}} To [[take]] or [[replenish]] something necessary, such as [[breath]] or [[sleep]]. {{defdate|from 14th c.}}
 ##: ''I have to stop for a moment and '''catch''' my breath.''
 ##: ''I '''caught''' some Z's on the train.''
-## {{context|transitive|lang=en}} To [[grip]] or [[entangle]]. {{defdate|from 17th c.}}
+##{{lb|en|transitive}} To [[grip]] or [[entangle]]. {{defdate|from 17th c.}}
 ##: ''My leg was '''caught''' in a tree-root.''
-## {{context|intransitive|lang=en}} To be [[hold back|held back]] or [[impede]]d.
+##{{lb|en|intransitive}} To be [[hold back|held back]] or [[impede]]d.
 ##: ''Be careful your dress doesn't '''catch''' on that knob.''
 ##: ''His voice '''caught''' when he came to his father's name.''
-## {{context|intransitive|lang=en}} To [[engage]] with some mechanism; to [[stick]], to succeed in interacting with something or initiating some process. {{jump|engage|t}}
+##{{lb|en|intransitive}} To [[engage]] with some mechanism; to [[stick]], to succeed in interacting with something or initiating some process. {{jump|engage|t}}
 ##: ''Push it in until it '''catches'''.''
 ##: ''The engine finally '''caught''' and roared to life.''
-## {{context|transitive|lang=en}} To have something be [[hold back|held back]] or [[impede]]d.
+##{{lb|en|transitive}} To have something be [[hold back|held back]] or [[impede]]d.
 ##: ''I '''caught''' my heel on the threshold.''
-## {{context|intransitive|lang=en}} To make a [[grasp]]ing or [[snatch]]ing motion (at). {{defdate|from 17th c.}}
+##{{lb|en|intransitive}} To make a [[grasp]]ing or [[snatch]]ing motion (at). {{defdate|from 17th c.}}
 ##: ''He '''caught''' at the railing as he fell.''
-## {{context|transitive|lang=en}} Of [[fire]], to [[spread]] or be [[convey]]ed to. {{defdate|from 18th c.}}
+##{{lb|en|transitive}} Of [[fire]], to [[spread]] or be [[convey]]ed to. {{defdate|from 18th c.}}
 ##: ''The fire spread slowly until it '''caught''' the eaves of the barn.''
-## {{context|transitive|rowing|lang=en}} To [[grip]] (the water) with one's oars at the beginning of the stroke. {{defdate|from 19th c.}}
-##* '''1906''', Arthur W. Stevens, ''Practical Rowing with Scull and Sweep'', [url=http://books.google.com/books?id=M6ICAAAAYAAJ|page=63]:
-##*: Stop gathering, in that gradual fashion, and '''catch''' the water sharply and decisively.
-## {{context|intransitive|agriculture|lang=en}} To [[germinate]] and set down [[root]]s. {{defdate|from 19th c.}}
+##{{lb|en|transitive|rowing}} To [[grip]] (the water) with one's oars at the beginning of the stroke. {{defdate|from 19th c.}}
+##*'''1906''', Arthur W. Stevens, ''Practical Rowing with Scull and Sweep'', [url=http://books.google.com/books?id=M6ICAAAAYAAJ|page=63]:
+##*:Stop gathering, in that gradual fashion, and '''catch''' the water sharply and decisively.
+##{{lb|en|intransitive|agriculture}} To [[germinate]] and set down [[root]]s. {{defdate|from 19th c.}}
 ##: ''The seeds '''caught''' and grew.''
-## {{context|transitive|surfing|lang=en}} To contact a [[wave]] in such a way that one can ride it back to [[shore]].
-##* '''2001''', John Lull, ''Sea Kayaking Safety & Rescue'', page 203 [http://books.google.com/books?id=h5IVyQlKsL4C|isbn=0899972748]:
-##*: If you are surfing a wave through the rocks, make sure you have a clear route before '''catching''' the wave.
-## {{context|transitive|computing|lang=en}} To handle an [[exception]]. {{jump|handle error|t}} {{defdate|from 20th c.}}
+##{{lb|en|transitive|surfing}} To contact a [[wave]] in such a way that one can ride it back to [[shore]].
+##*'''2001''', John Lull, ''Sea Kayaking Safety & Rescue'', p.203 [http://books.google.com/books?id=h5IVyQlKsL4C|isbn=0899972748]:
+##*:If you are surfing a wave through the rocks, make sure you have a clear route before '''catching''' the wave.
+##{{lb|en|transitive|computing}} To handle an [[exception]]. {{jump|handle error|t}} {{defdate|from 20th c.}}
 ##: ''When the program '''catches''' an exception, this is recorded in the log file.''
-# To intercept.
-## {{context|transitive|lang=en}} To [[seize]] or intercept a object moving through the air (or, sometimes, some other medium). {{jump|seize in motion|s|t}} {{defdate|from 16th c.}}
+#{{lb|en|heading}} ''To intercept.''
+##{{lb|en|transitive}} To [[seize]] or intercept a object moving through the air (or, sometimes, some other medium). {{jump|seize in motion|s|t}} {{defdate|from 16th c.}}
 ##: ''I will throw you the ball, and you '''catch''' it.''
 ##: ''Watch me '''catch''' this raisin in my mouth.''
-## {{context|transitive|now|_|rare|lang=en}} To [[seize]] (an [[opportunity]]) when it occurs. {{jump|seize opportunity|t}} {{defdate|from 16th c.}}
-##* '''1811''', [[w:Jane Austen|Jane Austen]], ''Sense and Sensibility'', [[wikisource:Sense_and_Sensibility/Chapter_18|Chapter 18]]:
-##*: she internally resolved henceforward to '''catch''' every opportunity of eyeing the hair and of satisfying herself, {{...}}
-## {{context|transitive|cricket|lang=en}} To end a player's [[innings]] by catching a hit ball before the first bounce. {{defdate|from 18th c.}}
+##{{lb|en|transitive|now|_|rare}} To [[seize]] (an [[opportunity]]) when it occurs. {{jump|seize opportunity|t}} {{defdate|from 16th c.}}
+##*'''1811''', {{w|Jane Austen}}, ''Sense and Sensibility'', [[wikisource:Sense_and_Sensibility/Chapter_18|Chapter 18]]:
+##*:she internally resolved henceforward to '''catch''' every opportunity of eyeing the hair and of satisfying herself,{{nb...}}.
+##{{lb|en|transitive|cricket}} To end a player's [[innings]] by catching a hit ball before the first bounce. {{defdate|from 18th c.}}
 ##: ''Townsend hit 29 before he was '''caught''' by Wilson.''
-## {{context|transitive|intransitive|baseball|lang=en}} To play (a specific period of time) as the [[catcher]]. {{defdate|from 19th c.}}
+##{{lb|en|transitive|intransitive|baseball}} To play (a specific period of time) as the [[catcher]]. {{defdate|from 19th c.}}
 ##: ''He '''caught''' the last three innings.''
-# To receive (by being in the way).
-## {{context|transitive|lang=en}} To be the victim of (something unpleasant, painful etc.). {{defdate|from 13th c.}}
+#{{lb|en|heading}} ''To receive (by being in the way).''
+##{{lb|en|transitive}} To be the victim of (something unpleasant, painful etc.). {{defdate|from 13th c.}}
 ##: ''You're going to '''catch''' a beating if they find out.''
-## {{context|transitive|lang=en}} To be touched or affected by (something) through exposure. {{defdate|from 13th c.}}
+##{{lb|en|transitive}} To be touched or affected by (something) through exposure. {{defdate|from 13th c.}}
 ##: ''The sunlight '''caught''' the leaves and the trees turned to gold.''
 ##: ''Her hair was '''caught''' by the light breeze.''
-## {{context|transitive|lang=en}} To be [[infect]]ed by (an illness). {{defdate|from 16th c.}}
+##{{lb|en|transitive}} To be [[infect]]ed by (an illness). {{defdate|from 16th c.}}
 ##: ''Everyone seems to be '''catching''' the flu this week.''
-## {{context|intransitive|lang=en}} To spread by [[infection]] or similar means.
+##{{lb|en|intransitive}} To spread by [[infection]] or similar means.
 ##* Addison
-##*: Does the sedition '''catch''' from man to man?
+##*:Does the sedition '''catch''' from man to man?
 ##* Mary Martha Sherwood
-##*: He accosted Mrs. Browne very civilly, told her his wife was very ill, and said he was sadly troubled to get a white woman to nurse her: "For," said he, "Mrs. Simpson has set it abroad that her fever is '''catching'''."
-## {{context|transitive|intransitive|lang=en}} To [[receive]] or be affected by (wind, water, fire etc.). {{defdate|from 18th c.}}
+##*:He accosted Mrs. Browne very civilly, told her his wife was very ill, and said he was sadly troubled to get a white woman to nurse her: "For," said he, "Mrs. Simpson has set it abroad that her fever is '''catching'''."
+##{{lb|en|transitive|intransitive}} To [[receive]] or be affected by (wind, water, fire etc.). {{defdate|from 18th c.}}
 ##: ''The bucket '''catches''' water from the downspout.''
 ##: ''The trees '''caught''' quickly in the dry wind.''
-##* '''2003''', Jerry Dennis, ''The Living Great Lakes'', page 63 [url=http://books.google.com/books?id=3P8lsPL0FQQC|isbn=0312251939]:
-##*: the sails '''caught''' and filled, and the boat jumped to life beneath us.
-## {{context|transitive|lang=en}} To [[acquire]], as though by infection; to take on through sympathy or infection. {{defdate|from 16th c.}}
+##*'''2003''', Jerry Dennis, ''The Living Great Lakes'', p.63: [url=http://books.google.com/books?id=3P8lsPL0FQQC|isbn=0312251939]:
+##*:the sails '''caught''' and filled, and the boat jumped to life beneath us.
+##{{lb|en|transitive}} To [[acquire]], as though by infection; to take on through sympathy or infection. {{defdate|from 16th c.}}
 ##: ''She finally '''caught''' the mood of the occasion.''
-## {{context|transitive|lang=en}} To be [[hit]] by something. {{jump|be hit|s}}
+##{{lb|en|transitive}} To be [[hit]] by something. {{jump|be hit|s}}
 ##: ''He '''caught''' a bullet in the back of the head last year.''
-## {{context|intransitive|lang=en}} To [[serve]] well or poorly for catching, especially for catching fish.
-##* {{quote-book|1877||Annual Report of the Ohio State Board of Agriculture|page=135|url=http://books.google.com/books?id=tXUSAAAAYAAJ
-|passage=The nets '''caught''' well, and Mr. Deeley reported it the best fishing ground he ever tried. }}
-## {{context|intransitive|lang=en}} To get pregnant
-##: ''Well, if you didn't '''catch''' this time, we'll have more fun trying again until you do.''
-# To take in with one's senses or intellect.
-## {{context|transitive|lang=en}} To grasp mentally: [[perceive]] and [[understand]]. {{jump|perceive and understand|t}} {{defdate|from 16th c.}}
+##{{lb|en|intransitive}} To [[serve]] well or poorly for catching, especially for catching fish.
+##*{{quote-book|1877||Annual Report of the Ohio State Board of Agriculture|page=135|url=http://books.google.com/books?id=tXUSAAAAYAAJ
+|passage=The nets '''caught''' well, and Mr. Deeley reported it the best fishing ground he ever tried.}}
+##{{lb|en|intransitive|}} To get pregnant.
+##:''Well, if you didn't '''catch''' this time, we'll have more fun trying again until you do.''
+#{{lb|en|heading}} ''To take in with one's senses or intellect.''
+##{{lb|en|transitive}} To grasp mentally: [[perceive]] and [[understand]]. {{jump|perceive and understand|t}} {{defdate|from 16th c.}}
 ##: ''Did you '''catch''' his name?
 ##: ''Did you '''catch''' the way she looked at him?''
-## {{context|transitive|lang=en}} To [[take in]]; to [[watch]] or [[listen to]] (an entertainment). {{defdate|from 20th c.}}
+##{{lb|en|transitive}} To [[take in]]; to [[watch]] or [[listen to]] (an entertainment). {{defdate|from 20th c.}}
 ##: ''I have some free time tonight so I think I'll '''catch''' a movie.''
-## {{context|transitive|lang=en}} To [[reproduce]] or [[echo]] a spirit or idea faithfully. {{defdate|from 17th c.}}
+##{{lb|en|transitive}} To [[reproduce]] or [[echo]] a spirit or idea faithfully. {{defdate|from 17th c.}}
 ##: ''You've really '''caught''' his determination in this sketch.''
-# To seize attention, interest.
-## {{context|transitive|lang=en}} To [[charm]] or [[entrance]]. {{defdate|from 14th c.}}
-##* '''2004''', Catherine Asaro, ''The Moon's Shadow'', page 40 [url=http://books.google.com/books?id=O2Rj1kYTF1kC|isbn=076534324X]:
-##*: No, a far more natural beauty '''caught''' him.
-## {{context|transitive|lang=en}} To [[attract]] and [[hold]] (a faculty or organ of sense). {{defdate|from 17th c.}}
+#{{lb|en|heading}} ''To seize attention, interest.''
+##{{lb|en|transitive}} To [[charm]] or [[entrance]]. {{defdate|from 14th c.}}
+##*'''2004''', Catherine Asaro, ''The Moon's Shadow'', p.40:[url=http://books.google.com/books?id=O2Rj1kYTF1kC|isbn=076534324X]:
+##*:No, a far more natural beauty '''caught''' him.
+##{{lb|en|transitive}} To [[attract]] and [[hold]] (a faculty or organ of sense). {{defdate|from 17th c.}}
 ##: ''He managed to '''catch''' her attention.''
 ##: ''The enormous scarf did '''catch''' my eye.''
 
