<United States of America#31957585>

--- a/en/u/United States of America.2102.wikitext
+++ b/en/u/United States of America.2102.wikitext
@@ -19,9 +19,9 @@
 **[[Usania]]
 **[[Usonia]]
 **[[Usona]]
-*[[Yankee land]] 
-*[[arsenal of democracy]]
-*[[land of the free]]
+*{{context|slang|lang=en}} [[Yankee land]] 
+*{{context|figurative|politics|lang=en}} [[arsenal of democracy]]
+*{{context|figurative|lang=en}} [[land of the free]]
 
 ====Translations====
 {{trans-top|Country in North America}}
