Undo revision 31808190 by [[Special:Contributions/Fabgil|Fabgil]] ([[User talk:Fabgil|talk]]) <count#31961884>

--- a/en/c/count.8441.wikitext
+++ b/en/c/count.8441.wikitext
@@ -229,7 +229,7 @@ From {{etyl|enm|en}} {{term|counten|lang=enm}}, from {{etyl|xno|en}} {{term|cont
 * Kyrgyz: {{t+|ky|эсеп}}
 * Middle English: {{t|enm|counte}}
 * Navajo: {{t|nv|nambooígíí}}
-* Portuguese: {{t+|pt|número}}
+* Portuguese: {{t+|pt|contagem|f}}, {{t+|pt|número}}
 * Romanian: {{t+|ro|numărare|f}}
 * Russian: {{t+|ru|счёт|m}}
 * Slovene: {{t|sl|rezultat|m}}
