t+dsb:[[gardina]] ([[WT:EDIT|Assisted]]) <curtain#31984970>

--- a/en/c/curtain.7391.wikitext
+++ b/en/c/curtain.7391.wikitext
@@ -107,6 +107,8 @@ From {{etyl|fro|en}} {{term|cortine|lang=fro}}, from {{etyl|la|en}} {{term|corti
 * Slovak: {{t|sk|opona|f}}
 * Slovene: {{t|sl|zavésa|f}}
 * Somali: {{t-needed|so}}
+* Sorbian:
+*: Lower Sorbian: {{t|dsb|gardina|f}}
 * Spanish: {{t+|es|cortina|f}}
 * Swahili: {{t+|sw|pazia}}
 * Swedish: {{t+|sv|gardin|c}}
