/* Catalan */ Israel is on the Catalan wiki. <Israel#31988150>

--- a/en/i/Israel.2109.wikitext
+++ b/en/i/Israel.2109.wikitext
@@ -201,7 +201,7 @@ From {{etyl|he|en}} {{term|יִשְׂרָאֵל||Israel|lang=he|tr=yisra'él}}, 
 ----
 
 ==Catalan==
-
+{{wikipedia|lang=ca}}
 ===Proper noun===
 {{ca-proper noun|m}}
 
