/* Hebrew */ clean up ety, and add [[Category:Hebrew masculine nouns with plurals ending in ־ות]] <שבוע#31988880>

--- a/en/ש/שבוע.2113.wikitext
+++ b/en/ש/שבוע.2113.wikitext
@@ -1,7 +1,7 @@
 ==Hebrew==
 
 ===Etymology===
-From [[שבע]] /Shéva/ "seven", the [http://www.wikipedia.org/wiki/Semitic_root semitic root] or [[שורש|Shoresh]] is {{term|שׁ־ב־ע|lang=he|tr=sh-v-`}}
+From the root {{term|שׁ־ב־ע|lang=he|tr=sh-v-`}}, from {{term|שבע||seven|lang=he|tr=shéva}}
 
 ===Pronunciation===
 * {{a|Modern Hebrew}} {{IPA|/ʃaˈvua(ʕ)/|lang=he}}
@@ -13,6 +13,8 @@ From [[שבע]] /Shéva/ "seven", the [http://www.wikipedia.org/wiki/Semitic_roo
 
 ====Related terms====
 * {{l|he|שבע|gloss=seven|tr=shéva}}
+
+[[Category:Hebrew masculine nouns with plurals ending in ־ות]]
 
 [[be:שבוע]]
 [[et:שבוע]]
