--- a/en/坰/坰.13043.wikitext
+++ b/en/坰/坰.13043.wikitext
@@ -26,7 +26,7 @@
 ===Kanji===
 {{ja-kanji|grade=|rs=土05}}
 
-# {{defn|lang=ja|sort=土05}}
+# [[wilds]]
 
 ====Readings====
 * {{ja-readings|on=[[けい]] (kei), [[きょう]] (kyō)|kun=}}
