--- a/en/坰/坰.13043.wikitext
+++ b/en/坰/坰.13043.wikitext
@@ -38,7 +38,8 @@
 ===Hanja===
 {{ko-hanja|hangeul=경|rv=gyeong|mr=kyŏng}}
 
-# {{defn|lang=ko|sort=土05}}
+# [[field]]
+# [[borderland]], [[vicinity]]
 
 ----
 
