--- a/en/坏/坏.13010.wikitext
+++ b/en/坏/坏.13010.wikitext
@@ -1,5 +1,6 @@
 {{also|壞}}
 ==Translingual==
+{{ja-forms|壊|坏|壞}}
 {{stroke order|strokes=7}}
 
 ===Etymology===
@@ -33,19 +34,16 @@
 * {{ja-readings|on=[[はい]] (hai)|kun=[[おか]] (oka), [[つき]] (tsuki)}}
 
 ===Noun===
-{{ja-noun|k|hira=つき|rom=tsuki}}
+{{ja-noun|つき}}
 
 # {{context|archaic|lang=ja|sort=つき}} shallow [[bowl]]
 
 ====Alternative forms====
 * {{l|ja|杯}}
 
-{{ja-noun|k|hira=さかずき|rom=sakazuki}}
+{{ja-noun|さかずき}}
 
-* {{alternative form of|盃|lang=ja}}
-
-[[Category:Japanese terms spelled with 坏]]
-[[Category:Japanese terms written with one Han script character]]
+# {{alternative form of|盃|lang=ja}}
 
 ----
 
