/* Translations */ Japanese 牛酪 <butter#32116233>

--- a/en/b/butter.7388.wikitext
+++ b/en/b/butter.7388.wikitext
@@ -233,7 +233,7 @@ the origin of "butterfly" is uncertain, and so is given under "Related terms" in
 * Irish: {{t+|ga|im|m}}
 *: Old Irish: {{t|sga|imb|n}}
 * Italian: {{t+|it|burro|m}}
-* Japanese: {{t+|ja|バター|tr=batā}}, {{t+|ja|乳酪|tr=[[にゅうらく]], nyūraku}}
+* Japanese: {{t+|ja|バター|tr=batā}}, {{t|ja|牛酪|tr=ぎゅうらく, gyūraku|sc=Jpan}}, {{t+|ja|乳酪|tr=[[にゅうらく]], nyūraku}}
 * Jèrriais: {{t|roa-jer|beurre|m}}
 * Kannada: {{t+|kn|ಬೆಣ್ಣೆ|tr=beṇṇe|sc=Knda}}
 * Kazakh: {{t|kk|май|sc=Cyrl}}
