/* English */ usage notes <New Zealand#32121840>

--- a/en/n/New Zealand.2106.wikitext
+++ b/en/n/New Zealand.2106.wikitext
@@ -16,6 +16,9 @@ From {{etyl|nl|en}} ''[[Nieuw-Zeeland]]'', "new Zeeland", after the Dutch settle
 # The islands of New Zealand, especially the North Island, South Island and nearby coastal islands.
 # The Realm of New Zealand, including the Cook Islands, Niue, Tokelau and the Ross Dependency.
 
+====Usage notes====
+As there is no adjective derived from New Zealand, it is also used in the attributive form - e.g. the '''New Zealand''' government.
+
 ====Translations====
 {{trans-top|country in Oceania}}
 * Afrikaans: {{t|af|Nieu-Seeland}}
