t+pt:[[drama]] ([[WT:EDIT|Assisted]]) <play#32123483>

--- a/en/p/play.8442.wikitext
+++ b/en/p/play.8442.wikitext
@@ -498,6 +498,7 @@ The noun is from {{etyl|enm|en}} {{term|pleye|lang=enm}}, from {{etyl|ang|en}} {
 * Norwegian Bokmål: {{t|nb|skuespill|n}}
 * Polish: {{t+|pl|sztuka}}
 {{trans-mid}}
+* Portuguese: {{t+|pt|drama|m}}
 * Russian: {{t+|ru|пьеса|f|tr=p’jésa}}
 * Spanish: {{t+|es|obra|f}}
 * Swahili: {{t+|sw|tamthilia}}
