/* Translingual */ minor markup fix <昆#32144307>

--- a/en/昆/昆.16942.wikitext
+++ b/en/昆/昆.16942.wikitext
@@ -8,7 +8,7 @@
 {{Han char|rn=72|rad=日|as=04|sn=8|four=6071<sub>1</sub>|canj=日心心 (APP)|ids=⿱[[日]][[比]]}}
 
 # [[elder]] [[brother]]
-# [[descendants]]
+# [[descendant]]s
 
 ====Derived terms====
 * [[混]]
