t+ga:[[togh]] ([[WT:EDIT|Assisted]]) <choose#32170435>

--- a/en/c/choose.6832.wikitext
+++ b/en/c/choose.6832.wikitext
@@ -70,7 +70,7 @@ From {{etyl|enm|en}} {{m|enm|chosen}}, {{m|enm|chesen}}, from {{etyl|ang|en}} {{
 * Icelandic: {{t+|is|velja}}
 * Ilocano: {{t|ilo|pili}}
 * Indonesian: {{t+|id|memilih}}, {{t+|id|pilih}}
-* Irish: {{t|ga|roghnaigh}}
+* Irish: {{t|ga|roghnaigh}}, {{t|ga|togh}}
 *: Old Irish: {{t|sga|do·goa}}
 * Italian: {{t+|it|scegliere}}, {{t+|it|selezionare}}
 * Japanese: {{t|ja|選ぶ|tr=えらぶ, erabu}}
