t+sva:[[ბოგ]] ([[WT:EDIT|Assisted]]) <bridge#32187371>

--- a/en/b/bridge.7389.wikitext
+++ b/en/b/bridge.7389.wikitext
@@ -224,6 +224,7 @@ The verb is from {{etyl|enm|en}} {{term|briggen|lang=enm}}, from {{etyl|ang|en}}
 *: Lower Sorbian: {{t|dsb|móst|m}}
 *: Upper Sorbian: {{t|hsb|móst|m}}
 * Spanish: {{t+|es|puente|m}}, {{t+|es|bóveda|f}} {{qualifier|El Salvador}}
+* Svan: {{t|sva|ბოგ}}
 * Swahili: {{t+|sw|daraja}}
 * Swedish: {{t+|sv|bro|c}}
 * Tagalog: {{t|tl|tulay}}
