--- a/en/块/块.13018.wikitext
+++ b/en/块/块.13018.wikitext
@@ -4,20 +4,13 @@
 ===Han character===
 {{Han char|rn=32|rad=土|as=04|sn=7|four=|canj=土木大 (GDK)|ids=⿰[[土]][[夬]]}}
 
-# [[piece]], [[lump]]
-# [[yuan]]; any [[currency]] [[unit]]
-
 ====References====
 * {{Han ref|kx=0226.101|dkj=04948|dj=0461.110|hdz=10428.050|uh=5757|ud=22359}}
 
 ----
 
-==Cantonese==
-
-===Hanzi===
-{{yue-hanzi|jyut=|y=faai3|tra=塊}}
-
-# {{defn|lang=yue|sort=土04}}
+==Chinese==
+{{zh-see|塊}}
 
 ----
 
@@ -30,34 +23,6 @@
 
 ====Readings====
 * {{ja-readings|on=[[かい]] (kai)|kun=}}
-
-----
-
-==Mandarin==
-
-===Pronunciation===
-* {{audio|zh-kuài.ogg|audio|lang=cmn}}
-
-===Hanzi===
-{{cmn-hanzi|tra=塊|pin=[[kuài]] ([[kuai4]])|wg=k'uai<sup>4</sup>}}
-
-===Noun===
-{{cmn-noun|s|sim=块|tra=塊|pin=kuài}}
-
-# [[piece]]; [[chunk]]; [[lump]]; [[part]]
-#* {{zh-usex|把 肉 切成 小 '''块'''。|Cut the meat into bite-sized '''pieces'''.}}
-#*  {{zh-usex|它 被 割 成了 三 '''块'''。|It was cut into three '''parts'''.}} 	  
-# {{context|colloquial|followed by {{zh-l|錢‎/钱}}|lang=cmn}} [[Yuan]] ({{zh-l|元}}), the Chinese currency or other currency
-#: {{zh-usex|一 块钱|a yuan, a dollar}}
-
-===Classifier===
-{{cmn-cls|s|sim=块|tra=塊|pin=kuài}}
-
-# {{non-gloss definition|classifier for piece of something (food, cloth, stone);}} piece of; chunk of
-#* {{zh-usex|一 块 蛋糕|a piece of cake}}
-#* {{zh-usex|一 块 木头|a piece of wood}}
-
-[[Category:Mandarin entries with audio links]]
 
 ----
 
