t+id:[[isap]] t+su:[[seuseup]] ([[WT:EDIT|Assisted]]) <suck#32224124>

--- a/en/s/suck.8436.wikitext
+++ b/en/s/suck.8436.wikitext
@@ -98,6 +98,7 @@ From {{etyl|enm|en}} {{term|souken|souken, suken||lang=enm}}, from {{etyl|ang|en
 * Hebrew: {{t|he|למצוץ|tr=limtsots}}
 * Hindi: {{t|hi|चूसना|tr=cūsnā}}
 * Hungarian: {{t+|hu|szopik}}
+* Indonesian: {{t+|id|isap}}
 * Irish: {{t|ga|súigh}}
 * Italian: {{t+|it|succhiare}}, {{t|it|suggere}}, {{t|it|ciucciare}}
 * Japanese: {{t|ja|吸う|tr=すう, suu}}, {{t|ja|しゃぶる|tr=shaburu}}
@@ -127,6 +128,7 @@ From {{etyl|enm|en}} {{term|souken|souken, suken||lang=enm}}, from {{etyl|ang|en
 * Sorbian:
 *: Lower Sorbian: {{t|dsb|cycaś}}
 * Spanish: {{t+|es|chupar}}, {{t+|es|sorber}}
+* Sundanese: {{t|su|seuseup}}
 * Swedish: {{t+|sv|suga}}
 * Tajik: {{t|tg|макидан|sc=Cyrl}}
 * Telugu: {{t+|te|చీకు|sc=Telu}}
