t+id:[[potong]] t+su:[[teukteuk]] ([[WT:EDIT|Assisted]]) <cut#32224726>

--- a/en/c/cut.6843.wikitext
+++ b/en/c/cut.6843.wikitext
@@ -508,6 +508,7 @@ From {{etyl|enm|en}} {{term|cutten|lang=enm}}, {{term|kitten|lang=enm}}, {{term|
 * Hebrew: {{t+|he|חתך|tr=khatákh}}
 * Hindi: {{t+|hi|काटना|tr=kāṭnā|sc=Deva}}
 * Icelandic: {{t+|is|skera}}
+* Indonesian: {{t+|id|potong}}
 * Istriot: {{t|ist|talgià}}
 * Italian: {{t+|it|tagliare}}, {{t+|it|incidere}}
 * Japanese: {{t+|ja|切る|tr=きる, kiru}}
@@ -540,6 +541,7 @@ From {{etyl|enm|en}} {{term|cutten|lang=enm}}, {{term|kitten|lang=enm}}, {{term|
 *: Lower Sorbian: {{t|dsb|rězaś}}
 *: Upper Sorbian: {{t|hsb|rězać}}
 * Spanish: {{t+|es|cortar}}, {{t|es|incidir}}
+* Sundanese: {{t|su|teukteuk}}
 * Swahili: {{t|sw|kukata}}
 * Swedish: {{t+|sv|skära}}
 * Tagalog: {{t|tl|hiwa}}
