--- a/en/p/port.1843.wikitext
+++ b/en/p/port.1843.wikitext
@@ -44,13 +44,13 @@ From {{etyl|ang|en}} {{term|port|lang=ang}}, from {{etyl|la|en}} {{term|portus||
 * Afrikaans: {{t|af|hawe}}
 * Albanian: {{t|sq|port|m}}, {{t|sq|liman|m}}
 * Arabic: {{t|ar|ميناء|m|tr=mīna’|sc=Arab}}
-* Armenian: {{t|hy|նավահանգիստ|tr=navahangist}}
+* Armenian: {{t|hy|նավահանգիստ}}
 * Asturian: {{t+|ast|puertu|m}}
 * Azeri: {{t|az|liman}}, {{t|az|port}}
 * Belarusian: {{t|be|порт|m|tr=port|sc=Cyrl}}, {{t|be|га́вань|f|sc=Cyrl}}
 * Bengali: {{t|bn|পোর্ট|tr=porţ|sc=Beng}}
-* Bulgarian: {{t+|bg|порт|m|tr=port|sc=Cyrl}}, {{t+|bg|приста́нище|n|sc=Cyrl}}
-* Burmese: {{t+|my|သင်္ဘောဆိပ်|tr=thin: bo: zeí|sc=Mymr}}
+* Bulgarian: {{t+|bg|порт|m|sc=Cyrl}}, {{t+|bg|приста́нище|n|sc=Cyrl}}
+* Burmese: {{t+|my|သင်္ဘောဆိပ်|sc=Mymr}}
 * Catalan: {{t+|ca|port|m}}
 * Chinese:
 *: Mandarin: {{t+|cmn|港|tr=gǎng|sc=Hani}}, {{t+|cmn|港口|tr=gǎngkǒu|sc=Hani}}, {{t+|cmn|口岸|tr=kǒu'àn|sc=Hani}}, {{t+|cmn|港埠|tr=gǎngbù|sc=Hani}}
@@ -64,9 +64,9 @@ From {{etyl|ang|en}} {{term|port|lang=ang}}, from {{etyl|la|en}} {{term|portus||
 * French: {{t+|fr|port|m}}
 * Friulian: {{t|fur|puart|m}}
 * Galician: {{t+|gl|porto|m}}
-* Georgian: {{t|ka|პორტი|tr=porti|sc=Geor}}, {{t|ka|ნავსადგური|tr=navsadguri|sc=Geor}}
+* Georgian: {{t|ka|პორტი|sc=Geor}}, {{t|ka|ნავსადგური|sc=Geor}}
 * German: {{t+|de|Hafen|m}}
-* Greek: {{t+|el|λιμάνι|n|tr=limáni}}, {{t+|el|λιμένας|m|tr=liménas}}
+* Greek: {{t+|el|λιμάνι|n}}, {{t+|el|λιμένας|m}}
 * Hawaiian: {{t|haw|awa}}
 * Hebrew: {{t+|he|נמל|m|tr=namál|sc=Hebr}}
 * Hindi: {{t|hi|बंदरगाह|m|tr=bandargāh|sc=Deva}}, {{t|hi|पोर्ट|tr=porṭ|sc=Deva}}
@@ -77,13 +77,13 @@ From {{etyl|ang|en}} {{term|port|lang=ang}}, from {{etyl|la|en}} {{term|portus||
 * Irish: {{t|ga|port}}
 * Italian: {{t+|it|porto|m}}
 * Japanese: {{t+|ja|港|tr=[[みなと]], minato|sc=Jpan}}
-* Kannada: {{t+|kn|ರೇವು|tr=rēvu|sc=Knda}}
-* Kazakh: {{t|kk|кемежай|tr=kemejay|sc=Cyrl}}, {{t+|kk|порт|sc=Cyrl}}
+* Kannada: {{t+|kn|ರೇವು|sc=Knda}}
+* Kazakh: {{t|kk|кемежай|sc=Cyrl}}, {{t+|kk|порт|sc=Cyrl}}
 * Khmer: {{t|km|កំពង់ផែ|tr=kɑmpʊəŋ pʰae|sc=Khmr}}, {{t+|km|កំពង់|tr=kɑmpʊəŋ|sc=Khmr}}
 * Korean: {{t+|ko|항구|sc=Kore}} ({{t+|ko|港口|sc=Kore}})
 * Kyrgyz: {{t|ky|порт|sc=Cyrl}}
 * Ladin: {{t|lld|port|m}}
-* Lao: {{t|lo|ທ່າ|tr=thā|sc=Laoo}}
+* Lao: {{t|lo|ທ່າ|sc=Laoo}}
 {{trans-mid}}
 * Latgalian: {{t|ltg|ūsta|f}}
 * Latin: {{t|la|portus}}
@@ -91,7 +91,7 @@ From {{etyl|ang|en}} {{term|port|lang=ang}}, from {{etyl|la|en}} {{term|portus||
 * Lithuanian: {{t|lt|uostas|m}}
 * Macedonian: {{t|mk|пристаниште|n|tr=pristánište|sc=Cyrl}}
 * Malay: {{t|ms|pelabuhan}}
-* Malayalam: {{t+|ml|തുറമുഖം|tr=thuRamukham|sc=Mlym}}
+* Malayalam: {{t+|ml|തുറമുഖം|sc=Mlym}}
 * Mongolian: {{t|mn|далайн боомт|sc=Cyrl}}
 * Neapolitan: {{t|nap|puorto}}
 * Norwegian:
@@ -116,9 +116,9 @@ From {{etyl|ang|en}} {{term|port|lang=ang}}, from {{etyl|la|en}} {{term|portus||
 * Swedish: {{t+|sv|hamn|c}}
 * Tagalog: {{t|tl|port}}, {{t|tl|daungan}}
 * Tajik: {{t|tg|бандар|tr=bandar|sc=Cyrl}}, {{t|tg|бандаргоҳ|sc=Cyrl}}, {{t|tg|порт|sc=Cyrl}}
-* Tamil: {{t|ta|றைமுகம்|tr=ṟaimukam|sc=Taml}}
+* Tamil: {{t|ta|றைமுகம்|sc=Taml}}
 * Tatar: {{t|tt|порт|sc=Cyrl}}
-* Telugu: {{t+|te|ఓడరేవు|tr=ōḍarēvu|sc=Telu}}
+* Telugu: {{t+|te|ఓడరేవు|sc=Telu}}
 * Thai: {{t|th|พอร์ต|tr=pôt|sc=Thai}}
 * Turkish: {{t+|tr|liman}}
 * Turkmen: {{t|tk|port}}
@@ -129,7 +129,7 @@ From {{etyl|ang|en}} {{term|port|lang=ang}}, from {{etyl|la|en}} {{term|portus||
 {{trans-bottom}}
 
 {{trans-top|town or city with a dock or harbour}}
-* Armenian: {{t|hy|նավահանգիստ|tr=navahangist}}
+* Armenian: {{t|hy|նավահանգիստ}}
 * Catalan: {{t+|ca|port|m}}
 * Chinese:
 *: Mandarin: {{t+|cmn|港市|tr=gǎngshì|sc=Hani}}
@@ -139,7 +139,7 @@ From {{etyl|ang|en}} {{term|port|lang=ang}}, from {{etyl|la|en}} {{term|portus||
 * French: {{t+|fr|port|m}}
 * Galician: {{t+|gl|porto|m}}
 * German: {{t+|de|Hafenstadt|f}}
-* Greek: {{t+|el|λιμάνι|n|tr=limáni}}
+* Greek: {{t+|el|λιμάνι|n}}
 * Hungarian: {{t+|hu|kikötőváros}}
 * Icelandic: {{t|is|hafnarborg|f}}
 * Ido: {{t+|io|portuo}}
@@ -186,7 +186,7 @@ From {{etyl|ang|en}} {{term|port|lang=ang}}, from {{etyl|la|en}} {{term|portus||
 * Dutch: {{t|nl|bakboord-}}
 * Finnish: {{t+|fi|paapuuri|alt=paapuurin}}
 * French: du [[bâbord]]
-* Greek: {{t+|el|αριστερό|n|tr=aristeró}}
+* Greek: {{t+|el|αριστερό|n}}
 {{trans-mid}}
 * Polish: {{t|pl|lewoburtowy|m}}
 * Spanish: {{t|es|a babor|m|f}}
@@ -337,7 +337,7 @@ Named from {{etyl|pt|en}} [[Oporto]], a city in [[Portugal]] from whence the win
 
 =====Translations=====
 {{trans-top|fortified wine}}
-* Armenian: {{t|hy|պորտվեյն|tr=portveyn}}
+* Armenian: {{t|hy|պորտվեյն}}
 * Czech: {{t|cs|portské|n}}
 * Dutch: {{t+|nl|porto}}, {{t+|nl|port|m}}
 * Estonian: {{t|et|portvein}}
@@ -345,14 +345,14 @@ Named from {{etyl|pt|en}} [[Oporto]], a city in [[Portugal]] from whence the win
 * French: {{t|fr|vin de Porto|m}}
 * Galician: {{t+|gl|porto|m}}
 * German: {{t+|de|Portwein|m}}
-* Greek: {{t|el|πορτό|n|tr=portó}}, {{qualifier|rare}} {{t|el|οίνος Πορτογαλίας|m|tr=oínos Portogalías}}
+* Greek: {{t|el|πορτό|n}}, {{qualifier|rare}} {{t|el|οίνος Πορτογαλίας|m}}
 {{trans-mid}}
 * Icelandic: {{t|is|púrtvín|n}}, {{t|is|portvín|n}}
 * Italian: {{t+|it|porto|m}}
 * Jèrriais: {{t|roa-jer|vîn d'Porto|m}}
 * Norwegian: {{t+|no|portvin|m}}, {{qualifier|slang}} {{t+|no|port|m}}
 * Portuguese: {{t+|pt|vinho do Porto|m}}
-* Russian: {{t+|ru|портвейн|m|tr=portwein|sc=Cyrl}}
+* Russian: {{t+|ru|портвейн|m|sc=Cyrl}}
 * Spanish: {{t|es|vino de Oporto|m}}
 * Swahili: {{t+|sw|mabandari}}
 * Swedish: {{t+|sv|portvin|n}}
@@ -400,12 +400,12 @@ From late {{etyl|non|da}} {{term|port|lang=non}}, {{term|portr|lang=non}}, from 
 * {{rhymes|ɔrt|lang=nl}}
 
 ===Etymology 1===
-From {{etyl|fr|nl}} {{l|fr|port}}
+From {{etyl|fr|nl}} {{m|fr|port}}
 
 ===Noun===
 {{nl-noun|m|g2=n|-en|-}}
 
-# {{l|en|postage}}
+# {{l/en|postage}}
 
 ===Etymology 2===
 Named from {{etyl|pt|nl}} [[Oporto]], a city in [[Portugal]] from whence the wines were originally shipped.
@@ -433,7 +433,7 @@ From {{etyl|fro|fr}} {{m|fro|port}}, from {{etyl|la|fr}} {{term|portus|lang=la}}
 * {{IPA|/pɔʁ/|lang=fr}}
 
 ===Noun===
-{{head|fr|noun|g=m}}
+{{fr-noun|g=m}}
 
 # port, [[harbour]]
 # port, harbour city
@@ -454,15 +454,20 @@ From {{etyl|fro|fr}} {{m|fro|port}}, from {{etyl|la|fr}} {{term|portus|lang=la}}
 ==Hungarian==
 
 ===Pronunciation===
-* {{IPA|/ˈport/|lang=hu}}
+* {{hu-IPA}}
 
 ===Noun===
 {{hu-noun|ok}}
 
-# {{context|computing|lang=hu}} [[port#English|port]]
+# {{context|computing|lang=hu}} {{l/en|port}}
 
 ====Declension====
 {{hu-decl-ok|por|t|ot}}{{hu-pos-otok|port|j|jai}}
+
+===Noun===
+{{head|hu|noun form}}
+
+# {{hu-inflection of|por|acc|s}}
 
 ----
 
@@ -532,7 +537,7 @@ From {{etyl|la|roa-jer}} {{term|portus||port, harbour|lang=la}}.
 ===Noun===
 {{roa-jer-noun|m}}
 
-# [[harbour]], [[#English|port]]
+# [[harbour]], {{l/en|port}}
 
 ====Synonyms====
 * {{l|roa-jer|caûchie}}
@@ -551,6 +556,7 @@ From {{etyl|la|lld}} {{m|la|portus}}.
 {{lld-noun|m|porc}}
 
 # [[port]], [[harbour]]
+
 ----
 
 ==Norwegian==
@@ -585,7 +591,7 @@ From {{etyl|la|ang}} {{term|portus|lang=la}}
 ===Noun===
 {{ang-noun|m}}
 
-# {{l|en|port}} {{gloss|for watercraft}}
+# {{l/en|port}} {{gloss|for watercraft}}
 
 ----
 
@@ -601,11 +607,12 @@ From {{etyl|la|fro}} {{term|portus|lang=la}}.
 ===Noun===
 {{fro-noun|m}}
 
-# {{l|en|port}} {{gloss|for watercraft}}
+# {{l/en|port}} {{gloss|for watercraft}}
 #* {{quote-book|circa 1150|title=[[s:fr:La Chanson de Roland/Raoul Mortier|La Chanson de Roland]]|author=Turoldus|passage=As '''porz''' d'Espaigne en est passet Rollant|translation=Roland went to the ports of Spain}}
 
 ====Descendants====
-* French: {{l|fr|port}}
+* French: {{l/fr|port}}
+
 ----
 
 ==Polish==
@@ -641,7 +648,7 @@ From {{etyl|fr|ro}} {{term|port|lang=fr}}, {{etyl|it|ro}} {{term|porto|lang=it}}
 ====Noun====
 {{ro-noun|n|porturi}}
 
-# [[#English|port]] (town with port)
+# {{l/en|port}} (town with port)
 
 =====Declension=====
 {{ro-noun-n|pl=porturi|def=portul}}
